:= durch \coloneqq ersetzt
git-svn-id: https://svn.lug-jena.de/uni-skripte@2360 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/Kapitel3.tex
+++ b/kuelshammer-algebra1/Kapitel3.tex
@@ -25,7 +25,7 @@ Für $n \in \N$ ist $K^{n \times n}$ mit der üblichen Addition und Multiplikation
 \begin{satz}\label{satz:3.1}
 Für $m \in \N$ wird 
 \[\Z / m\Z = \left\{a + m\Z \colon a \in \Z\right\} = \left\{0 + m\Z, 1 + m\Z, \ldots, m - 1 + m\Z\right\}\] 
-zu einem kommutativen Ring mit: \[(a + m\Z) + (b + m\Z) := a \mystackrel{+}{\cdot} b + m\Z \ \ \ (a, b \in \Z)\]
+zu einem kommutativen Ring mit: \[(a + m\Z) + (b + m\Z) loneqq a \mystackrel{+}{\cdot} b + m\Z \ \ \ (a, b \in \Z)\]
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
@@ -94,7 +94,7 @@ $\ZmZ{6}$ ist kein Körper. z.\,B.: ist $\underbrace{(2 + 6\Z)}_{\neq 0 + 6\Z}\un
 	Im Fall $a + m\Z = 39 + 100\Z$ erhalten wir z.\,B.: \[1 = \ggt(39, 100) = 16 \cdot 100 - 41 \cdot 39 \equiv 59 \cdot 39 \pmod{100}\] Also: $(39 + 100\Z)^{-1} = 59 + 100\Z$.
 	\item Die \highl{Eulerische $\varphi$-Funktion} $\varphi \colon \N \mapsto \N$ (\textsc{Euler} 1707--1783) wird definiert durch:
 	\[ \begin{array}{lcl}
-	\varphi(m) & := & \left|U(\ZmZ{m})\right| = \left|\left\{a + m\Z \colon \ggt(a, m) = 1\right\}\right|\\
+	\varphi(m) & loneqq & \left|U(\ZmZ{m})\right| = \left|\left\{a + m\Z \colon \ggt(a, m) = 1\right\}\right|\\
 	           & = & \left|\left\{a \in \N \colon 1 \leq a \leq m, \ggt(a, m) = 1\right\}\right| \ \ \ (m \in \N)
 	\end{array}\]
 	z.\,B. ist $\varphi(6) = 2$
@@ -138,7 +138,7 @@ Wir suchen nach einer expliziten Formel.
 %%%%%%%%%%%%%%%%%%%
 \begin{defi}
 Die \highl{Möbius-Funktion} $\mu \colon \N \mapsto \Z$ (\textsc{Möbius} 1790--1868) wird definiert durch:
-\[\mu(m) := \begin{cases}(-1)^r & \text{falls } m \text{ Produkt von } r \text{ verschiedenen Primzahlen ist}\\ 0 & \text{sonst}\end{cases}\]
+\[\mu(m) loneqq \begin{cases}(-1)^r & \text{falls } m \text{ Produkt von } r \text{ verschiedenen Primzahlen ist}\\ 0 & \text{sonst}\end{cases}\]
 \end{defi}
 
 %%%%%%%%%%%%%%%%%%%
@@ -147,7 +147,7 @@ Die \highl{Möbius-Funktion} $\mu \colon \N \mapsto \Z$ (\textsc{Möbius} 1790--18
 \begin{bsp}
 $\mu(4) = \mu(2^2) = 0$\\
 $\mu(6) = \mu(2 \cdot 3) = (-1)^2 = 2$\\
-$\mu(1) := 1$
+$\mu(1) loneqq 1$
 \end{bsp}
 
 %%%%%%%%%%%%%%%%%%%
@@ -216,7 +216,7 @@ Für $m \in \N$ mit Primfaktorzerlegung $m = p_1^{a_1} \cdot \ldots \cdot p_r^{a_
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Möbius-Inversion mit $f := \varphi, F := id_{\N}$ ergibt:\\
+Möbius-Inversion mit $f loneqq \varphi, F loneqq id_{\N}$ ergibt:\\
 \[\begin{array}{lcl}
 \varphi(m) & = & \sum_{d\mid m} \mu(d) \underbrace{F(\frac{m}{d})}_{= \frac{m}{d}}\\
 & = & m - \frac{m}{p_1}- \frac{m}{p_2} - \ldots - \frac{m}{p_r} + \frac{m}{p_1p_2} + \ldots + \frac{m}{p_{r-1}p_r} + \ldots + (-1)^r\frac{m}{p_1p_2\ldots p_r}\\
@@ -271,7 +271,7 @@ Insbesondere gilt für $p \in \PZ$:
 % Bemerkung
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}
-Setze $\F_p := \ZmZ{p}$ für $p \in \PZ$
+Setze $\F_p loneqq \ZmZ{p}$ für $p \in \PZ$
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
@@ -281,7 +281,7 @@ Setze $\F_p := \ZmZ{p}$ für $p \in \PZ$
 In $\prod\limits_{0 \neq x \in K}x$ kürze man jeweils $x$ gegen $x^{-1}$, dies geht, falls $x \neq x^{-1}$ ist.
 \[x = x^{-1} \Leftrightarrow x^2 = 1 \Leftrightarrow \underbrace{x^2 - 1}_{(x + 1)(x - 1)} = 0 \Leftrightarrow x = \pm 1.\]
 Also $\prod\limits_{0 \neq x \in K}x = 1 \cdot (-1) = -1$.\\
-Für $K := \ZmZ{p}$ erhält man: $\underbrace{\prod\limits_{i = 1}^{p - 1}(i + p\Z)}_{= -1 + p\Z} = \prod\limits_{i = 1}^{p}i + p\Z = (p - 1)! + p\Z$, d.\,h. $(p - 1)! = -1 \pmod{p}$
+Für $K loneqq \ZmZ{p}$ erhält man: $\underbrace{\prod\limits_{i = 1}^{p - 1}(i + p\Z)}_{= -1 + p\Z} = \prod\limits_{i = 1}^{p}i + p\Z = (p - 1)! + p\Z$, d.\,h. $(p - 1)! = -1 \pmod{p}$
 \end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
@@ -295,8 +295,8 @@ Für jede endliche abelsche Gruppe $G$ und jedes $g \in G$ gilt: \[g^{\left|G\rig
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Sei $G = \left\{x_1, \ldots, x_n\right\}$, $n = \left|G\right|$. Für $i, j = 1, \ldots, n$ gilt dann \[gx_i = gx_j \Leftrightarrow g^{-1}gx_i = g^{-1}gx_j \Leftrightarrow x_i = x_j\] Daher ist auch $G = \left\{gx_1, \ldots, gx_n\right\}$. Also gilt: \[x := \prod_{i = 1}^{n}x_i = \prod_{i = 1}^{n}(gx_i) = g^n\prod_{i = 1}^{n} = g^nx,\] d.\,h. $g^n = 1$.\\
-Für $G = U(\ZmZ{m})$, d.\,h. $\left|G\right| = \varphi(m)$ und $g := a + m\Z \in G$ gilt also: \[1 + m\Z = g^{\left|G\right|} = (a + m\Z)^{\varphi(m)} = a^{\varphi(m)} + m\Z,\] d.\,h. $a^{\varphi(m)} \equiv 1 \pmod{m}$.
+Sei $G = \left\{x_1, \ldots, x_n\right\}$, $n = \left|G\right|$. Für $i, j = 1, \ldots, n$ gilt dann \[gx_i = gx_j \Leftrightarrow g^{-1}gx_i = g^{-1}gx_j \Leftrightarrow x_i = x_j\] Daher ist auch $G = \left\{gx_1, \ldots, gx_n\right\}$. Also gilt: \[x loneqq \prod_{i = 1}^{n}x_i = \prod_{i = 1}^{n}(gx_i) = g^n\prod_{i = 1}^{n} = g^nx,\] d.\,h. $g^n = 1$.\\
+Für $G = U(\ZmZ{m})$, d.\,h. $\left|G\right| = \varphi(m)$ und $g loneqq a + m\Z \in G$ gilt also: \[1 + m\Z = g^{\left|G\right|} = (a + m\Z)^{\varphi(m)} = a^{\varphi(m)} + m\Z,\] d.\,h. $a^{\varphi(m)} \equiv 1 \pmod{m}$.
 \end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
