--- a/kuelshammer-algebra1/Kapitel9.tex
+++ b/kuelshammer-algebra1/Kapitel9.tex
@@ -24,7 +24,7 @@
 Gegeben sei eine Teilmenge $M = M_0 \subseteq \R^2 = \C$ mit $0, 1 \in M$.\\
 Dann sei $\mathcal{G}(M)$ die \highl{Menge!aller Geraden}{Menge aller Geraden}, die durch mindestens zwei Punkte in $M$ gehen, und $\mathcal{K}(M)$ die \highl{Menge!aller Kreise}{Menge aller Kreise}, deren Mittelpunkt in $M$ liegt und deren Radius gleich dem Abstand von zwei Punkten in $M$\randbem{Es muss kein Punkt auf der Peripherie liegen.} ist.\\
 Für $i \in \N$ sei $M_i$ die Menge, die aus den Elementen in $M_{i-1}$ und den Schnittpunkten von zwei verschiedenen Geraden in $\mathcal{G}(M_{i-1})$, den Schnittpunkten von zwei verschiedenen Kreisen in $\mathcal{K}(M_{i-1})$ und den Schnittpunkten einer Geraden in $\mathcal{G}(M_{i-1})$ mit einem Kreis in $\mathcal{K}(M_{i-1})$ besteht.\\
-Die Punkte in $M_{\infty} := \bigcup\limits_{i = 0}^{\infty}M_i$ heißen dann \highl{Punkte!Konstruierbar}{konstruierbar}.
+Die Punkte in $M_{\infty} loneqq \bigcup\limits_{i = 0}^{\infty}M_i$ heißen dann \highl{Punkte!Konstruierbar}{konstruierbar}.
 \end{defi}
 
 %%%%%%%%%%%%%%%%%%%
@@ -40,7 +40,7 @@ Für jede Teilmenge $M \subseteq C$ mit $0, 1 \in M$ ist $M_{\infty}$ ein Teilkör
 \begin{beweis}
 \begin{enumerate}[(i)]
 	\begin{multicols}{2}
-	\item $\operatorname{i} := \sqrt{-1} \in M_{\infty}$:\\
+	\item $\operatorname{i} loneqq \sqrt{-1} \in M_{\infty}$:\\
 	\InitGraph{3}{3}{1.5}{1.5}{1cm}
 	\Axes
 	\UserLine[2](3, 0){i}
@@ -155,7 +155,7 @@ Für jede Teilmenge $M \subseteq C$ mit $0, 1 \in M$ ist $M_{\infty}$ ein Teilkör
 	\SetNormal
 	\CloseGraph
 	
-	\item $z \in M_{\infty} \Rightarrow w := \sqrt{z} \in M_{\infty}$:\\
+	\item $z \in M_{\infty} \Rightarrow w loneqq \sqrt{z} \in M_{\infty}$:\\
 	Schreibe: $z = \left|z\right|(\cos\varphi + \operatorname{i} \cdot \sin\varphi)$.\\
 	Dann: $\sqrt{z} = \sqrt{\left|z\right|}(\cos\frac{\varphi}{2} + \operatorname{i} \cdot \sin\frac{\varphi}{2})$.\\
 	Winkelhalbierung mit Zirkel und Lineal bekanntlich möglich.\\
@@ -276,7 +276,7 @@ Für $z \in M_{\infty}$ ist also insbesondere $\left[\Q(M \cup \overline{M},z):\Q
 	Also ist $X^3 - 3X - 1$ irreduzibel in $\Q\left[X\right]$ und $\left[Q(x):Q\right] = 3$. Aus \autoref{bem:9.2} folgt, dass die Winkeldreiteilung allgemein nicht geht.
 	
 	\item Konstruktion des regelmäßigen 7--Ecks:\\
-	Wir nehmen an, dass wir regelmäßiges 7--Eck mit Zirkel und Lineal konstruieren können. Dann ist $\rho = e^{\frac{2\pi i}{7}}$ aus $\left\{0, 1\right\}$ konstruierbar, also auch $\eta := \rho + \rho^{-1} = 2\cos{\frac{2\pi}{7}}$. Wir wissen
+	Wir nehmen an, dass wir regelmäßiges 7--Eck mit Zirkel und Lineal konstruieren können. Dann ist $\rho = e^{\frac{2\pi i}{7}}$ aus $\left\{0, 1\right\}$ konstruierbar, also auch $\eta loneqq \rho + \rho^{-1} = 2\cos{\frac{2\pi}{7}}$. Wir wissen
 	\[\begin{array}{lcl}
 		0 & = & \rho^7 - 1 = \underbrace{(\rho - 1)}_{\neq 0}(\rho^6 + \rho^5 + \rho^4 + \rho^3 + \rho^2 + \rho + 1)\text{, also}\\
 		0 & = & \rho^{-3}(\rho^6 + \rho^5 + \rho^4 + \rho^3 + \rho^2 + \rho + 1)\\
