--- a/kuelshammer-algebra1/Kapitel14.tex
+++ b/kuelshammer-algebra1/Kapitel14.tex
@@ -74,7 +74,7 @@ Dann gilt:
 Für $n\in\N$ ist nach Übungsaufgabe 34 die Abbildung $\epsilon\colon\Sym(n)\mapsto(\left\{\pm 1\right\}, \cdot)$, $g\mapsto\prod\limits_{1\leq i<j\leq n}\frac{g(j)-g(i)}{j-i}$, ein Homomorphismus.
 Für $g\in\Sym(n)$ nennt man $\epsilon(g)$ das Vorzeichen von $g$.\\
 Ist $\epsilon(g) = 1$, so heißt $g$ gerade, sonst ungerade.\\
-Dann ist \[\Alt(n):=\Ker(\epsilon) = \left\{g\in\Sym(n)\colon g \text{ gerade}\right\}\unlhd\Sym(n).\]
+Dann ist \[\Alt(n)\coloneqq\Ker(\epsilon) = \left\{g\in\Sym(n)\colon g \text{ gerade}\right\}\unlhd\Sym(n).\]
 $\Alt(n)$ heißt \highl{Gruppe!alternierend}{alternierende Gruppe} des Grades $n$.
 
 Ist $n>1$ und $t\in\Sym(n)$ derart, dass $t$ die Zahlen $1$ und $2$ vertauscht und $3,\ldots,n$ festhält, so ist $\epsilon(t) = -1$, insbesondere ist $\epsilon$ surjektiv.
@@ -95,7 +95,7 @@ Daher ist $\abs{\Sym(n):\Alt(n)} = 2$ und $\abs{\Alt(n)} = \frac{n!}{2}$.
 	
 	\item $\Alt(4)$ auflösbar:
 	Betrachte $\Alt(4) \unrhd V_4 \unrhd \left\{1\right\}$ mit
-	\[V_4 := \left\{
+	\[V_4 \coloneqq \left\{
 	\underbrace{\begin{pmatrix}1 & 2 & 3 & 4\\ 1 & 2 & 3 & 4\end{pmatrix}}_{=id}, 
 	\underbrace{\begin{pmatrix}1 & 2 & 3 & 4\\ 2 & 1 & 4 & 3\end{pmatrix}}_{=a}, 
 	\underbrace{\begin{pmatrix}1 & 2 & 3 & 4\\ 3 & 4 & 1 & 2\end{pmatrix}}_{=b},
@@ -242,11 +242,11 @@ Dann existiert eine Radikal- und Galoiserweiterung $M\mid K$ mit $L\subseteq M$.
 \begin{beweis}
 Sei $K = K_0 \subseteq K_1 \subseteq \dotsc \subseteq K_r = L$ mit $K_i = K_{i-1}(b_i)$ und $b_i^{n_i} \in K_{i-1}$ wie oben.\\
 Dann: $L = K(b_1,\ldots,b_r)$ und $\left[L:K\right] < \infty$. Für $i=1,\ldots,r$ sie $\mu_i$ das Minimalpolynom von $b_i$ über $K$.
-Außerdem sei $N$ Zerfällungskörper von $\mu := \mu_1\ldots\mu_r$ über $L$.
+Außerdem sei $N$ Zerfällungskörper von $\mu \coloneqq \mu_1\ldots\mu_r$ über $L$.
 Dann ist $N$ auch Zerfällungskörper von $\mu$ über $K$.
 Wegen $\chr K = 0$ ist also $N\mid K$ eine Galoiserweiterung.\\
-Schreibe: $G:= \Gal(N\mid K) = \left\{\sigma_1 = id_N,\sigma_2,\ldots,\sigma_s\right\}$.\\
-Setze: $K_{ij} := K(\sigma_1(b_1),\ldots,\sigma_s(b_1),\ldots,\sigma_1(b_{i-1}),\ldots,\sigma_s(b_{i-1}),\sigma_1(b_i),\ldots,\sigma_j(b_i))$ $(i=1,\ldots,r,j=1,\ldots,s)$.\\
+Schreibe: $G\coloneqq \Gal(N\mid K) = \left\{\sigma_1 = id_N,\sigma_2,\ldots,\sigma_s\right\}$.\\
+Setze: $K_{ij} \coloneqq K(\sigma_1(b_1),\ldots,\sigma_s(b_1),\ldots,\sigma_1(b_{i-1}),\ldots,\sigma_s(b_{i-1}),\sigma_1(b_i),\ldots,\sigma_j(b_i))$ $(i=1,\ldots,r,j=1,\ldots,s)$.\\
 Dann: $\begin{array}[t]{lclclclcl}
 	K & \subseteq & K_{11} & \subseteq & K_{12} & \subseteq & \dotsc & \subseteq & K_{1s}\\
 	& \subseteq & K_{21} & \subseteq & K_{22} & \subseteq & \dotsc & \subseteq & K_{2s}\\
@@ -279,7 +279,7 @@ Dann ist $\Gal(K\mid K)$ auflösbar.
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
 \randbem{Aussagen von $\Gal(M\mid K)$ schwer; deswegen Umweg über Adjunktion von $\zeta$ (dann vorheriges Kapitel anwenden).} Sei $K = K_0 \subseteq K_1 \subseteq \dotsc \subseteq K_r = L$ mit $K_i = K_{i-1}(b_i)$ und $b_i^{n_i}\in K_{i-1}$ wie oben.
-Sei $n := n_1\ldots n_r$ und $M$ Zerfällungskörper von $X^n-1$ über $L$.
+Sei $n \coloneqq n_1\ldots n_r$ und $M$ Zerfällungskörper von $X^n-1$ über $L$.
 Wie üblich bilden die Nullstellen von $X^n-1$ in $M$ eine zyklische Gruppe $\left\langle \zeta\right\rangle$ der Ordnung $n$.
 Wegen $K\subseteq K(\zeta)\subseteq K_1(\zeta) \subseteq \dotsc \subseteq K_r(\zeta) = L(\zeta) = M$, $\zeta^n = 1 \in K$ und $K_i(\zeta) = K_{i-1}(\zeta,b_i)$ und $b_i^{n_i} \in K_{i-1} \subseteq K_{i-1}(\zeta)$ für alle $i$ ist $M\mid K$ Radikalerweiterung.
 
@@ -361,7 +361,7 @@ Sei $f\colon K\mapsto\widetilde{K}$, $a\mapsto\widetilde{a}$, ein Isomorphismus 
 Sei 
 \[\varphi = a_nX^n+a_{n-1}X^{n-1}+\dotsc+a_1X + a_0\in K\left[X\right]\] 
 und sei 
-\[\widetilde{\varphi}:=\widetilde{a}_nX^n + \widetilde{a}_{n-1}X^{n-1}+\dotsc+\widetilde{a}_1X+\widetilde{a}_0 \in \widetilde{K}\left[X\right]\] 
+\[\widetilde{\varphi}\coloneqq\widetilde{a}_nX^n + \widetilde{a}_{n-1}X^{n-1}+\dotsc+\widetilde{a}_1X+\widetilde{a}_0 \in \widetilde{K}\left[X\right]\] 
 das entsprechende Polynom in $\widetilde{K}\left[X\right]$.\\
 Sei $L$ Zerfällungskörper von $\varphi$ über $K$, und sei $\widetilde{L}$ Zerfällungskörper von $\widetilde{\varphi}$ über $\widetilde{K}$.\\
 Dann kann man $f$ zu einem Isomorphismus $g\colon L\mapsto\widetilde{L}$\randbem{d.\,h. Zerfällungskörper sind isomorph.} fortsetzen.
@@ -409,7 +409,7 @@ Dann enthält $G$ ein Element der Ordnung $p$.
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Sei $M:= \left\{(g_1,\ldots,g_p)\in G^p\colon g_1\cdot\dotsc\cdot g_p = 1\right\}$.\\
+Sei $M\coloneqq \left\{(g_1,\ldots,g_p)\in G^p\colon g_1\cdot\dotsc\cdot g_p = 1\right\}$.\\
 Dann: $\abs{M} = \abs{G}^{p-1}\equiv 0\pmod{p}$.\\
 Wir definieren eine Relation $\sim$ auf $M$ durch:
 \[(g_1,\ldots,g_p)\sim(h_1,\ldots,h_p):\Leftrightarrow \exists i\in\left\{1,\ldots,p\right\}\colon (h_1,\ldots,h_p)=(g_i,\ldots,g_p,g_1,\ldots,g_{i-1})\]
@@ -441,7 +441,7 @@ Jedes $g\in \Sym(n)$ lässt sich als Produkt von Basistranspositionen schreiben.
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Sei $\Phi(g) := \left\{\left\{i,j\right\}\colon 1\leq i<j\leq n, g(i)>g(j)\right\}$ und $l(g) := \abs{\Phi(g)}$.
+Sei $\Phi(g) \coloneqq \left\{\left\{i,j\right\}\colon 1\leq i<j\leq n, g(i)>g(j)\right\}$ und $l(g) \coloneqq \abs{\Phi(g)}$.
 (Die Elemente in $\Phi(g)$ heißen \highl{Inversionen} oder \highl{Fehlstände} und $l(g)$ heißt die \highl{L"ange}{Länge} von $g$.)
 Wir argumentieren nach $l(g)$.
 
@@ -480,9 +480,9 @@ Nach \autoref{satz:14.5} ist $\Gal(M\mid\Q)$ auflösbar, also auch $\Gal(L\mid\Q)
 Nach Eisenstein (\autoref{satz:14.6}) ist $\varphi$ irreduzibel in $\Q\left[X\right]$.
 Da $\C$ algebraisch abgeschlossen ist, zerfällt $\varphi$ in $\C\left[X\right]$ in Linearfaktoren.
 Wegen $\chr\C = 0$ sind die Nullstellen $b_1,\ldots,b_5$ von $\varphi$ in $\C$ paarweise verschieden.
-Daher ist $L':=\Q(b_1,\ldots,b_5)$ ein Zerfällungskörper von $\varphi$ über $\Q$.
+Daher ist $L'\coloneqq\Q(b_1,\ldots,b_5)$ ein Zerfällungskörper von $\varphi$ über $\Q$.
 Nach \autoref{satz:14.7} existiert ein Isomorphismus $f\colon L\mapsto L'$ mit $f(x) = x$ für $x\in\Q$.\\
-Daher ist $G:=\Gal(L'\mid\Q) \cong \Gal(L\mid\Q)$ auflösbar.
+Daher ist $G\coloneqq\Gal(L'\mid\Q) \cong \Gal(L\mid\Q)$ auflösbar.
 Wir werden zeigen, dass andererseits $G\cong\Sym(5)$ ist.
 \autoref{satz:14.2} liefert dann den gesuchten Widerspruch.
 
