--- a/kuelshammer-algebra1/Kapitel16.tex
+++ b/kuelshammer-algebra1/Kapitel16.tex
@@ -4,10 +4,10 @@
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:16.1}
 Jede Gruppe $G$ operiert auf der Menge der Untergruppen von $G$ durch:
-\[{}^gH:= gHg^{-1}\ (g\in G, H\leq G).\]
+\[{}^gH\coloneqq gHg^{-1}\ (g\in G, H\leq G).\]
 [$gHg^{-1}$ ist als Bild von $H$ unter einem inneren Automorphismus von $G$ tatsächlich wieder eine Untergruppe von $G$.]\\
 Die Bahn einer Untergruppe $H\leq G$ ist die Konjugationsklasse
-\[\mathfrak{k}_H:=\left\{gHg^{-1}\colon g\in G\right\}.\]
+\[\mathfrak{k}_H\coloneqq\left\{gHg^{-1}\colon g\in G\right\}.\]
 Gehören zwei Untergruppen $H_1,H_2 leq G$ zur gleichen Konjugationsklasse [d.\,h. existiert ein $g\in G$ mit $H_2=gH_1g^{-1}$], so heißen $H_1,H_2$ konjugiert in $G$.\\
 Der Stabilisator von $H\leq G$ unter der Konjugationsoperation ist
 \[\left\{g\in G\colon gHg^{-1}\right\} = \left\{g\in G\colon gH=Hg\right\}=:N_G(H)\]
@@ -65,19 +65,19 @@ Seien $G$ eine endliche Gruppe und $p\in\PZ$.
 	Dann: $p\Bigl|\abs{Z(G)}$.
 	
 	Nach Cauchy (\autoref{satz:14.8}) enthält $Z(G)$ ein Element der Ordnung $p$.
-	Folglich: $Z:=\left\langle z\right\rangle \unlhd G$, und $\abs{G/Z}<\abs{G}$.
+	Folglich: $Z\coloneqq\left\langle z\right\rangle \unlhd G$, und $\abs{G/Z}<\abs{G}$.
 	
 	Nach Induktion enthält $G/Z$ eine $p$--Sylowgruppe $P/Z$.
 	Da $\abs{P}=\abs{P/Z}\cdot\abs{Z}$ eine $p$--Potenz ist, ist $P$ eine $p$--Untergruppe von $G$.
 	Wegen $\abs{G:P}=\abs{G/Z:P/Z}\not\equiv 0\pmod{p}$ ist $P\in\Syl_p(G)$.
 	
-	\item[(iii)] Sei $P\in\Syl_p(G)$ und $\mathfrak{P}:=\left\{gPg^{-1}\colon g\in G\right\}$ die Konjugationsklasse von $P$ in $G$ (also $\mathfrak{P}\subseteq\Syl_p(G)$).\\
+	\item[(iii)] Sei $P\in\Syl_p(G)$ und $\mathfrak{P}\coloneqq\left\{gPg^{-1}\colon g\in G\right\}$ die Konjugationsklasse von $P$ in $G$ (also $\mathfrak{P}\subseteq\Syl_p(G)$).\\
 	Nach \autoref{bem:16.1} ist
 	\[\abs{\mathfrak{P}} = \abs{G:N_G(P)}\Bigl|\abs{G:P},\]
 	also $\abs{\mathfrak{P}}\not\equiv 0\pmod{p}$.
 	
 	Jede $p$--Untergruppe $Q$ von $G$ operiert auf $\mathfrak{P}$ durch Konjugation:
-	\[(gPg^{-1}):=xgPg^{-1}x^{-1} = (xg)P(xg)^{-1}\ (x\in Q,g\in G).\]
+	\[(gPg^{-1})\coloneqq xgPg^{-1}x^{-1} = (xg)P(xg)^{-1}\ (x\in Q,g\in G).\]
 	Die Länge jeder Bahn ist ein Teiler von $\abs{Q}$, also eine $p$--Potenz.\\
 	Wegen $p\nmid\abs{\mathfrak{P}}$ existiert eine Bahn der Länge $1$, d.\,h. ein $R\in\mathfrak{P}$ mit $xRx^{-1}=R$ für alle $x\in Q$.
 	Dann $Q\leq N_G(R)$, und $R\unlhd N_G(R)$.\\
@@ -226,10 +226,11 @@ Ist $P_1\cap P_2=1$ für je 2 verschiedene $P_1,P_2\in\Syl_p(G)$, so enthalten di
 Daher ist nur noch Platz für eine einzige $q$--Sylowgruppe $Q$.
 Dann ist aber $Q\unlhd G$. Widerspruch!
 
-Es existieren also verschiedene $p$--Sylowgrzuppen $P_1,P_2$ von $G$ mit $D:=P_1\cap P_2 \neq 1$.
+Es existieren also verschiedene $p$--Sylowgruppen $P_1,P_2$ von $G$
+mit $D\coloneqq P_1\cap P_2 \neq 1$.
 Für $i=1,2$ ist $\abs{P_i}=p^2$, d.\,h. $P_i$ abelsch.
 Insbesondere ist $D\unlhd P_i$ und $P_i<N_G(D)<G$, d.\,h. $\abs{N_G(D)}=p^2q$.
-Nach Übungsaufgabe 52 ist $N_G(D)\unlhd G$. Widerspruch!
+Nach Übungsaufgabe~52 ist $N_G(D)\unlhd G$. Widerspruch!
 \end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
@@ -247,7 +248,7 @@ Sei $G$ Gruppe mit $\abs{G}<60$.
 Nach den früheren Erkenntnissen bleiben nur die Fälle $\abs{G}\in\left\{24,40,48,54,56\right\}$ übrig.
 \begin{enumerate}[(i)]
 	\item Sei $\abs{G}=24$ und $P\in\Syl_2(G)$, d.\,h. $\abs{P}=8$ und $\abs{G:P}=3$.\\
-	Übungsaufgabe 51 liefert einen Homomorphismus $\rho\colon G\mapsto\Sym(G/P)\cong\Sym(3)$ und $K:=\Ker(\rho)\leq P$, also $\abs{K}\Bigl|\abs{P}=8$.
+	Übungsaufgabe 51 liefert einen Homomorphismus $\rho\colon G\mapsto\Sym(G/P)\cong\Sym(3)$ und $K\coloneqq\Ker(\rho)\leq P$, also $\abs{K}\Bigl|\abs{P}=8$.
 	Daher ist $K$ auflösbar.
 	Wegen $\abs{G/K}=\abs{\rho(G)}\Bigl|\abs{\Sym(3)}=6$ ist $G/K$ auflösbar.\\
 	Also: $G$ auflösbar.
@@ -291,7 +292,7 @@ $\Alt(5)$ ist eine einfache Gruppe.
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Anderenfalls existiert ein Normalteiler $1<N<G:=\Alt(5)$.
+Anderenfalls existiert ein Normalteiler $1<N<G\coloneqq\Alt(5)$.
 Nach \autoref{satz:16.6} sind $N$ und $G/N$ auflösbar, also auch $G$. Widerspruch!
 \end{beweis}
 
