--- a/kuelshammer-algebra1/Kapitel17.tex
+++ b/kuelshammer-algebra1/Kapitel17.tex
@@ -24,25 +24,26 @@ Jeder endliche Schiefkörper $D$ ist kommutativ, d.\,h. ein Körper.
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}[Witt]
-Für $x\in D$ heißt $C_D(x):=\left\{c\in D\colon cx=xc\right\}$ \highl{Schiefkörper!Zentralisator}{Zentralisator} von $x$ in $D$.\\
+Für $x\in D$ heißt $C_D(x)\coloneqq\left\{c\in D\colon cx=xc\right\}$ \highl{Schiefkörper!Zentralisator}{Zentralisator} von $x$ in $D$.\\
 Offenbar ist $C_D(x)$ ein "`Teilschiefkörper"' von $D$.
 Daher ist das Zentrum 
-\[Z(D):=\bigcap\limits_{x\in D}C_D(x)=\left\{z\in D\colon zx=xz \text{ für alle } x\in D\right\}\]
+\[Z(D)\coloneqq\bigcap\limits_{x\in D}C_D(x)=\left\{z\in D\colon zx=xz \text{ für alle } x\in D\right\}\]
 auch ein "`Teilschiefkörper"' von $D$.
 Da $Z(D)$ kommutativ ist, ist $Z(D)$ ein Körper.
 Daher ist $\abs{Z(D)}=:q$ eine Primzahlpotenz.\\
 Offenbar ist $D$ ein $Z(D)$--Vektorraum, und für jedes $x\in D$ ist $C_D(x)$ ein $Z(D)$--Untervektorraum von $D$.
 
-Wir setzen $n:=\dim_{Z(D)}D$ und $n_x:=\dim_{Z(D)}C_D(x)$ für $x\in D$.
+Wir setzen $n\coloneqq\dim_{Z(D)}D$ und $n_x\coloneqq\dim_{Z(D)}C_D(x)$ für $x\in D$.
 Dann $\abs{D}=q^n$ und $\abs{C_D(x)}=q^{n_x}$ $(x\in D)$.\\
-Seien $K_1,\ldots,K_t$ die Konjugationsklassen der multiplikativen Gruppe $G:=U(D)=D\backslash\left\{0\right\}$, dabei sei $\abs{K_i}=1$ für $i=1,\ldots,s$ und $\abs{K_i}>1$ für $i=s+1,\ldots,t$.
+Seien $K_1,\ldots,K_t$ die Konjugationsklassen der multiplikativen
+Gruppe $G\coloneqq U(D)=D\backslash\left\{0\right\}$, dabei sei $\abs{K_i}=1$ für $i=1,\ldots,s$ und $\abs{K_i}>1$ für $i=s+1,\ldots,t$.
 Dann $K_1\cup\dotsc\cup K_s =
 Z(G)=Z(D)\backslash\left\{0\right\}$.
 
 Für $i=1,\ldots,t$ sei $x_i\in K_i$.
 Klassengleichung:
 \[q^n-1=\abs{G}=\sum\limits_{i=1}^{t}\abs{K_i}=\abs{Z(G)}+\sum\limits_{i=s+1}^{t}\abs{G:C_G(x_i)}=q-1+\sum\limits_{i=s+1}^t\frac{q^n-1}{q^{n_i}-1}\]
-mit $n_i:=n_{x_i}$ $(i=1,\ldots,t)$.
+mit $n_i\coloneqq n_{x_i}$ $(i=1,\ldots,t)$.
 Für $i=s+1,\ldots,t$ ist $q^{n_i}-1=\abs{C_G(x_i)}\Bigl|\abs{G}=q^n-1$, also:
 \[q^{n_i}=\ggt(q^{n_i}-1,q^n-1)=q^{\ggt(n_i,n)}-1\]
 nach Übungsaufgabe 5.
@@ -72,7 +73,7 @@ Also: $\abs{\Phi_n(q)}>q-1$. Widerspruch!
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}\label{bsp:17.1}
 Man zeigt leicht, dass:
-\[\HQ:= \left\{\begin{pmatrix}a & b\\-\overline{b} & \overline{a}\end{pmatrix}\colon a,b\in \C\right\}\]
+\[\HQ\coloneqq \left\{\begin{pmatrix}a & b\\-\overline{b} & \overline{a}\end{pmatrix}\colon a,b\in \C\right\}\]
 ein Schiefkörper ist.
 Die Elemente in $\HQ$ heißen Quaternionen (\textsc{Hamilton}).
 Offenbar ist $\HQ$ ein $\R$--Vektorraum der Dimension $4$.
