--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -167,7 +167,6 @@
 % ... und mancheinem gefällt auch das Phi nicht
 \renewcommand*{\phi}{\varphi}
 
-\newcommand*{\addindex}[1]{\index{#1}\emph{#1}}
 \newcommand*{\mystackrel}[2]{\mathrel{\genfrac{}{}{0pt}{2}{#1}{#2}}}
 \newcommand*{\labelarrow}[1]{\stackrel{#1}{\longmapsto}}
 
@@ -1569,7 +1568,7 @@ Ist $\varphi(b) = 0$, so heißt $b$ \highl{Nullstelle} von $\varphi$.
 % Definition
 \begin{defi}
   Für $\varphi = \sum_{i = 0}^{\infty} a_i X^i \in K[X]$ definiert man
-  die (\emph{formale}) \highl{Ableitung} durch $\varphi' \coloneqq \sum_{i
+  die (\emph{formale}\index{Ableitung!formale}) \highl{Ableitung} durch $\varphi' \coloneqq \sum_{i
     = 1}^{\infty} i a_i X^{i - 1} \in K[X]$.
 \end{defi}
 
