Einige der \emph{} waren in Wirklichkeit \highl{}. Geändert.
git-svn-id: https://svn.lug-jena.de/uni-skripte@2362 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/Kapitel10.tex
+++ b/kuelshammer-algebra1/Kapitel10.tex
@@ -4,10 +4,10 @@
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:10.1}
 (Wir wiederholen ohne Beweis grundlegende Tatsachen über Gruppen aus den Grundvorlesungen, Beweise z.\,B. im Lineare Algebra II Skript)\\
-Eine \highl{Gruppe} ist eine Menge $G$ mit einer \emph{assoziativen Verknüpfung} [d.\,h. $a(bc) = (ab)c$ für alle $a, b, c \in G$], die (genau) ein \emph{neutrales Element} $e = 1$ [d.\,h. $1a = a = a1$ für alle $a \in G$] enthält und zu jedem $g \in G$ (genau) ein \emph{inverses Element} $g^{-1}$ [d.\,h. $gg^{-1} = 1 = g^{-1}g$].
+Eine \highl{Gruppe} ist eine Menge $G$ mit einer \highl[Verknüpfung!assoziative]{assoziativen Verknüpfung} [d.\,h. $a(bc) = (ab)c$ für alle $a, b, c \in G$], die (genau) ein \highl[Element!neutrales]{neutrales Element} $e = 1$ [d.\,h. $1a = a = a1$ für alle $a \in G$] enthält und zu jedem $g \in G$ (genau) ein \highl[Element!inverses]{inverses Element} $g^{-1}$ [d.\,h. $gg^{-1} = 1 = g^{-1}g$].
 Bekanntlich gilt: \[1^{-1} = 1, (a^{-1})^{-1}=a, (ab)^{-1} = b^{-1}a^{-1} \qquad (a, b \in G)\]
-Die Anzahl $\abs{G}$ der Elemente von $G$ heißt \emph{Ordnung} von $G$.
-Ist $ab = ba$ für alle $a, b \in G$, so heiße $G$ \emph{kommutativ} oder \emph{abelsch}.\\
+Die Anzahl $\abs{G}$ der Elemente von $G$ heißt \highl{Ordnung} von $G$.
+Ist $ab = ba$ für alle $a, b \in G$, so heiße $G$ \highl{kommutativ}\index{Gruppe!kommutative} oder \highl{abelsch}\index{Gruppe!abelsche}.\\
 Bekannte Gruppen sind $(\C, +)$, $(\C\backslash\left\{0\right\}, \cdot)$.
 Für jede Menge $X$ ist \[Sym(X) \coloneqq \left\{f \colon X \mapsto X \left|f \text{ bijektiv}\right.\right\}\]
 eine Gruppe bezüglich der Komposition von Abbildungen.
