\randbem in \footnote geändert
Ich fand randbem eher störend. Daher habe ich Fußnoten draus gemacht. Beim Überarbeiten werde ich dann evtl. richtigen Text draus machen.

git-svn-id: https://svn.lug-jena.de/uni-skripte@2363 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/Kapitel16.tex
+++ b/kuelshammer-algebra1/Kapitel16.tex
@@ -161,7 +161,7 @@ Für $p,q,r\in\PZ$ ist jede Gruppe $G$ de Ordnung $pq$ oder $pqr$ auflösbar.
 	\item Sei $\abs{G}=pq$, \OE{} $p>q$ wegen \autoref{satz:15.7}.
 	Nach Sylow (\autoref{satz:16.1}) ist $\abs{\Syl_p(G)}\Bigl| pq$ und $\abs{\Syl_p(G)} \equiv 1\pmod{p}$, also $\abs{\Syl_p(G)} \in \left\{1,q\right\}$.
 	Wegen $q<p$ ist $p\nmid q-1$, d.\,h. $q\not\equiv 1\pmod{p}$.\\
-	Daher\randbem{!Wichtiger Trick!} $\abs{\Syl_p(G)} = 1$, d.\,h. $G$ enthält genau eine $p$--Sylowgruppe $P$.
+	Daher\footnote{!Wichtiger Trick!} $\abs{\Syl_p(G)} = 1$, d.\,h. $G$ enthält genau eine $p$-Sylowgruppe $P$.
 	Dann: $\abs{G:N_G(P)} = 1$, d.\,h. $G=N_G(P)$, d.\,h. $P\unlhd G$.
 	Wegen $\abs{P}=p$ und $\abs{G/P}=q$ sind $P$ und $G/P$ auflösbar, also auch $G$.
 	
