--- a/kuelshammer-algebra1/Kapitel11.tex
+++ b/kuelshammer-algebra1/Kapitel11.tex
@@ -347,27 +347,27 @@ zum Beweis genügt zu zeigen:
 \alpha(\sqrt[3]{2} \cdot \sqrt[3]{4}) & = & \alpha(\sqrt[3]{8}) = \alpha(2) = 2
 \end{array}\]
 Ferner existiert genau ein $\Q(\sqrt[3]{2})$--lineare Abbildung $\beta\colon L\mapsto L$ mit $1\mapsto 1$, $\rho\mapsto\rho^2 = -\rho - 1$.
-Dies ist auch ein Körperautomorphismus; denn: \randbem{Wir werden später bessere Methoden zur Konstruktion von Körperhomomorphismen kennen lernen.}
+Dies ist auch ein Körperautomorphismus; denn:\footnote{Wir werden später bessere Methoden zur Konstruktion von Körperhomomorphismen kennen lernen.}
 \[\begin{array}{lcl}
 \beta(\rho)\beta(\rho) & = & \rho^2\rho^2 = \rho^4 = \rho,\\
 \beta(\rho^2) & = & \beta(-\rho - 1) = -\beta(\rho) - \beta(1) = (\rho + 1) - 1 = \rho.
 \end{array}\]
 Also: $\alpha, \beta \in \Gal{(L\mid \Q)}$ mit $\Fix{(\left\langle \alpha\right\rangle)} \supseteq \Q(\rho)$ und $\Fix{(\left\langle \beta\right\rangle)} \supseteq \Q(\sqrt[3]{2})$.\\
-Wegen $\left[L:\Q(\rho)\right] = 3$ und $\left[L:\Q(\sqrt[3]{2})\right] = 2$ folgt aus dem Gradsatz: \randbem{Körper dazwischen muss als Grad Teiler von 2 haben, da 2 prim $\Rightarrow$ Teilkörper ist entweder $L$ oder $\Q(\sqrt[3]{2})$}
+Wegen $\left[L:\Q(\rho)\right] = 3$ und $\left[L:\Q(\sqrt[3]{2})\right] = 2$ folgt aus dem Gradsatz:\footnote{Körper dazwischen muss als Grad Teiler von 2 haben, da 2 prim $\Rightarrow$ Teilkörper ist entweder $L$ oder $\Q(\sqrt[3]{2})$}
 \[\Fix{(\left\langle \alpha\right\rangle)} = \Q(\rho), \quad \quad \Fix{(\left\langle \beta\right\rangle)} = \Q(\sqrt[3]{2}).\]
 Aus dem Gradsatz folgt außerdem:
 \[\begin{array}{lcl}
 \Fix{(\Gal{(L\mid\Q)})} & \subseteq & \Fix{(\left\langle \alpha\right\rangle)} \cap \Fix{(\left\langle \beta\right\rangle)}\\
 & = & \Q(\rho) \cap \Q(\sqrt[3]{2}) = \Q
 \end{array}\]
-Daher: $L\mid\Q$ Galoiserweiterung und $\abs{G} = 6$.\randbem{Grad der Körpererweiterung}\\
+Daher: $L\mid\Q$ Galoiserweiterung und $\abs{G} = 6$.\footnote{Grad der Körpererweiterung}\\
 Wegen $\sqrt[3]{2} \labelarrow{\alpha} \rho\sqrt[3]{2} \labelarrow{\alpha} \rho^2\sqrt[3]{2} \labelarrow{\alpha} \underbrace{\rho^3}_{\rho^3 = 1}\sqrt[3]{2} = \sqrt[3]{2}$ ist $\alpha^3 = 1$.
 Daher hat $\alpha$ Ordnung 3, d.\,h. $\abs{\left\langle \alpha\right\rangle} = 3$ und $\abs{G:\left\langle \alpha\right\rangle} = 2$.
 Nach \autoref{bsp:10.2}(iv) ist $\left\langle \alpha\right\rangle \unlhd G$.\\
 Analog ist $\overbrace{\beta^2 = 1}^{\text{weil } \rho^3 = 1 \Rightarrow \rho^4 = \rho}$.
 Nach dem 1. Isomorphiesatz (\autoref{satz:10.6}) ist $\left\langle \alpha\right\rangle \left\langle \beta\right\rangle \leq G$ und $\abs{\left\langle \alpha\right\rangle \left\langle \beta\right\rangle} = \nicefrac{\underbrace{\abs{\left\langle \alpha\right\rangle}}_{=3} \cdot \underbrace{\abs{\left\langle \beta\right\rangle}}_{= 2}}{\underbrace{\abs{\left\langle \alpha\right\rangle \cap \left\langle \beta\right\rangle}}_{= 1}} = 6$, d.\,h. $G = \left\langle \alpha\right\rangle \left\langle \beta\right\rangle = \left\{\alpha^i\beta^j\colon i = 0, 1, 2, j = 0, 1\right\}$.\\
 Man rechnet leicht nach: $\beta\alpha\beta^{-1} = \alpha^{-1}$, d.\,h. $\beta\alpha = \alpha^2\beta$.\\
-Jede echte Untergruppe von $G$ hat Ordnung 1, 2 oder 3, ist also zyklisch \randbem{weil Ordnung prim ist}.
+Jede echte Untergruppe von $G$ hat Ordnung 1, 2 oder 3, ist also zyklisch\footnote{weil Ordnung prim ist}.
 Daher sind $\underbrace{\left\{1\right\}}_{Ord 1}$, $\underbrace{\left\langle \alpha\right\rangle}_{Ord 3} = \left\langle \alpha^{-1}\right\rangle$, $\underbrace{\left\langle \beta\right\rangle}_{Ord 2}$, $\underbrace{\left\langle \alpha\beta\right\rangle}_{Ord 2}$, $\underbrace{\left\langle \alpha^2\beta\right\rangle}_{Ord 2}$, $G$ die einzigen Untergruppen von $G$, diese haben Ordnungen 1, 3, 2, 2, 2, 6.\\
 (z.\,B.: ist $\alpha \beta^2 = \alpha \beta \alpha \beta = \alpha \alpha^2 \beta \beta = \alpha^3 \beta^2 = 1 \cdot 1 = 1$)\\
 Wir berechnen die entsprechenden Fixkörper. Dazu gibt es (mindestens) 2 Methoden:
