Teils wurden -- flasch eingesetzt. Alle fchaslen Einträge in - gewandelt.
git-svn-id: https://svn.lug-jena.de/uni-skripte@2364 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/Kapitel11.tex
+++ b/kuelshammer-algebra1/Kapitel11.tex
@@ -70,7 +70,7 @@ $\alpha^{-1}(1) = \alpha^{-1}(\alpha(1)) = 1$.
 \begin{bsp}\label{bsp:11.1}
 Nach Aufgabe 26 ist $\Aut(\R) = \left\{id_{\R}\right\}$.
 Man kann zeigen, dass $\Aut(\C)$ überabzählbar ist. Nach \autoref{satz:7.8} ist $\Aut(\F_{p^n}) = \left\langle f\right\rangle$ zyklisch der Ordnung $n$ für $p \in \PZ$, $n \in \N$;
-dabei ist $f\colon \F_{p^n}\mapsto \F_{p^n}$, $x\mapsto x^p$, der Frobenius--Automorphismus.
+dabei ist $f\colon \F_{p^n}\mapsto \F_{p^n}$, $x\mapsto x^p$, der Frobenius-Automorphismus.
 \end{bsp}
 
 %%%%%%%%%%%%%%%%%%%
@@ -143,7 +143,7 @@ Für jede Körpererweiterung $L\mid K$ heißt
 	
 	\item Für alle $a, b \in K$, $x, y \in L$, $\alpha \in \Gal(L\mid K)$ gilt:
 	\[\alpha(ax + by) = \overbrace{\alpha(a)}^{=a}\alpha(x) + \overbrace{\alpha(b)}^{=b}\alpha(y) = a\alpha(x) + b\alpha(y).\]
-	Daher ist $\alpha\colon K\mapsto L$ eine $K$--lineare Abbildung.
+	Daher ist $\alpha\colon K\mapsto L$ eine $K$-lineare Abbildung.
 	
 	\item Sei $K$ ein Körper, $G \leq \Aut(K)$ endlich und $F \coloneqq \Fix(G)$.
 	Nach \autoref{satz:11.3} ist $\left[K:F\right] = \abs{G}$.\\
@@ -243,7 +243,7 @@ d.\,h. $\left[F:K\right] = \left[\widetilde{F}:K\right]$ und $F = \widetilde{F}$
 \begin{bsp}\label{bsp:11.4}
 Für $p \in \PZ$, $n \in \N$ ist 
 \[G \coloneqq \Gal(\F_{p^n}\mid \F_p) = \Aut(\F_{p^n}) = \left\langle f\right\rangle\]
-nach \autoref{bsp:11.1} zyklisch der Ordnung $n$, wobei $f\colon \F_{p^n} \mapsto \F_{p^n}$, $x\mapsto x^p$, der Frobenius--Automorphismus ist.\\
+nach \autoref{bsp:11.1} zyklisch der Ordnung $n$, wobei $f\colon \F_{p^n} \mapsto \F_{p^n}$, $x\mapsto x^p$, der Frobenius-Automorphismus ist.\\
 Nach \autoref{satz:6.8} ist
 \[\begin{array}{lcl}
 \Fix(G) & \coloneqq & \left\{x \in \F_{p^n}\colon x^{p^k} = x \quad \forall k \in \N\right\}\\
@@ -327,14 +327,14 @@ Sei $K = \Q$ und $L = \Q(\sqrt[3]{2}, \rho)$ mit $\rho = -\frac{1}{2} + \frac{1}
 Dann: $0 = \rho^3-1 = (\rho - 1)(\rho^2 + \rho + 1)$, d.\,h. $\rho^2 + \rho + 1 = 0$.\\
 Das Minimalpolynom von $\rho$ über $\Q(\sqrt[3]{2})$ ist $X^2 + X + 1$ $\left[\text{wegen } \Q(\sqrt[3]{2}) \subseteq \R \text{ und } \rho \notin \R\right]$.
 Also: $\left[\Q(\sqrt[3]{2}):\Q\right] = 3$, $\left[\Q(\sqrt[3]{2}, \rho):\Q(\sqrt[3]{2})\right] = 2$, $\left[\Q(\sqrt[3]{2}, \rho):\Q\right] = 3 \cdot 2 = 6$ (Gradsatz).\\
-Genauer bilden $1, \sqrt[3]{2}, \sqrt[3]{2}^2 = \sqrt[3]{4}$ eine $\Q$--Basis von $L$.\\
+Genauer bilden $1, \sqrt[3]{2}, \sqrt[3]{2}^2 = \sqrt[3]{4}$ eine $\Q$-Basis von $L$.\\
 Wir berechnen $G\coloneqq \Gal{(L\mid \Q)}$.\\
 Wie findet man Elemente in $\Gal{(L\mid \Q)}$.?\\
 Jedes $\sigma \in \Gal{(L\mid \Q)}$ ist eindeutig bestimmt durch $\sigma(\sqrt[3]{2})$ und $\sigma(\rho)$;
 dabei gilt: $\sigma(\sqrt[3]{2})^3 = \sigma(2) = 2$ und $\begin{array}[t]{lcl} & & \sigma(\rho)^2 + \sigma(\rho) + 1\\ & = &  \sigma(\rho^2 + \rho + 1) = \sigma(0) = 0\end{array}$\\
 d.\,h. $\sigma(\sqrt[3]{2}) \in \left\{\sqrt[3]{2}, \rho\sqrt[3]{2}, \rho^2\sqrt[3]{2}\right\}$ und $\sigma(\rho) \in \left\{\rho, \rho^2\right\}$.\\
 Daher gibt es höchstens 6 Möglichkeiten für $\sigma$, d.\,h. $\abs{\Gal{(L\mid \Q)}} \leq 6$.\\
-Es existiert genau eine $\Q(\rho)$--lineare Abbildung: $\alpha\colon L\mapsto L$ mit $1\mapsto 1$, $\sqrt[3]{2}\mapsto\rho\sqrt[3]{2}$, $\sqrt[3]{4}\mapsto\rho^2\sqrt[3]{4} = (-\rho - 1)\sqrt[3]{4}$.
+Es existiert genau eine $\Q(\rho)$-lineare Abbildung: $\alpha\colon L\mapsto L$ mit $1\mapsto 1$, $\sqrt[3]{2}\mapsto\rho\sqrt[3]{2}$, $\sqrt[3]{4}\mapsto\rho^2\sqrt[3]{4} = (-\rho - 1)\sqrt[3]{4}$.
 Dies ist ein Körperautomorphismus;
 zum Beweis genügt zu zeigen:
 \[\alpha(bb') = \alpha(b)\alpha(b') \text{ für Basiselemente } b, b'.\]
@@ -346,7 +346,7 @@ zum Beweis genügt zu zeigen:
 \alpha(\sqrt[3]{2})\alpha(\sqrt[3]{4}) & = & (\rho\sqrt[3]{2})(\rho^2\sqrt[3]{4}) = \rho^3\sqrt[3]{8} = 2,\\
 \alpha(\sqrt[3]{2} \cdot \sqrt[3]{4}) & = & \alpha(\sqrt[3]{8}) = \alpha(2) = 2
 \end{array}\]
-Ferner existiert genau ein $\Q(\sqrt[3]{2})$--lineare Abbildung $\beta\colon L\mapsto L$ mit $1\mapsto 1$, $\rho\mapsto\rho^2 = -\rho - 1$.
+Ferner existiert genau ein $\Q(\sqrt[3]{2})$-lineare Abbildung $\beta\colon L\mapsto L$ mit $1\mapsto 1$, $\rho\mapsto\rho^2 = -\rho - 1$.
 Dies ist auch ein Körperautomorphismus; denn:\footnote{Wir werden später bessere Methoden zur Konstruktion von Körperhomomorphismen kennen lernen.}
 \[\begin{array}{lcl}
 \beta(\rho)\beta(\rho) & = & \rho^2\rho^2 = \rho^4 = \rho,\\
@@ -378,10 +378,10 @@ Wir berechnen die entsprechenden Fixkörper. Dazu gibt es (mindestens) 2 Methoden
 	& = & \left\{x \in L\colon (\sigma - id_L)(x) = 0\right\}\\
 	& = & \bigcap\limits_{\sigma \in H}\Ker(\sigma - id_L)
 	\end{array}\]
-	Dabei ist jedes $\sigma - id_L$ eine $K$--lineare Abbildung.
+	Dabei ist jedes $\sigma - id_L$ eine $K$-lineare Abbildung.
 	Damit ist die Berechnung von $\Fix{(H)}$ auf die Lösung eines homogenen linearen Gleichungssystems zurückgeführt.
 	
-	\item[2. Methode:] Für $x \in L$ (z.\,B. $x$ Element einer $K$--Basis von $L$) sei $T_H(x) \coloneqq \sum\limits_{\sigma \in H}\sigma(x)$.\\
+	\item[2. Methode:] Für $x \in L$ (z.\,B. $x$ Element einer $K$-Basis von $L$) sei $T_H(x) \coloneqq \sum\limits_{\sigma \in H}\sigma(x)$.\\
 	Für $\tau \in H$ ist dann $\begin{array}[t]{lcl}\tau(T_H(x)) & = & \sum\limits_{\sigma \in H}\tau(\sigma(x))\\ & = & \sum\limits_{\sigma' \in H}\sigma'(x)\\ & = & T_H(x)\end{array}$,\\
 	d.\,h. $T_H(x) \in \Fix{(H)}$.\\
 	Wir betrachten den Spezialfall $H = \left\langle \alpha\beta\right\rangle$:
@@ -484,7 +484,7 @@ Das Minimalpolynom von $b$ über $K$ sei $\mu = X^n + a_{n-1}X^{n-1} + \dotsc + a
 Dann: $n = \deg{\mu} = \left[K(b):K\right] = \left[L:K\right]$.
 Nach dem Hauptsatz der Galoistheorie (\autoref{satz:11.4}) ist $\abs{\Gal{(L\mid K)}} = \left[L:K\right] = n$.\\
 Jedes $\sigma \in G \coloneqq \Gal{(L\mid K)}$ ist durch $\sigma(b)$ eindeutig bestimmt.
-Daher sind die n--Elemente $\sigma(b)$ ($\sigma \in G$) paarweise verschieden.
+Daher sind die $n$-Elemente $\sigma(b)$ ($\sigma \in G$) paarweise verschieden.
 Für $\sigma \in G$ ist außerdem 
 \[\begin{array}{lcl}
 	\mu(\sigma(b)) & = & \sigma(b)^n + a_{n-1}\sigma(b)^{n-1} + \dotsc + a_1\sigma(b) + a_0\\
