--- a/kuelshammer-algebra1/Kapitel13.tex
+++ b/kuelshammer-algebra1/Kapitel13.tex
@@ -122,23 +122,23 @@ Folglich hat $\alpha$ die Primfaktorzerlegung $\alpha = (X-3)\beta$
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:13.3}
 Sei $n \in \N$.
-Ein $\zeta \in \C$ mit $\zeta^n = 1$ heißt \highl{Einheitswurzel}{n--te Einheitswurzel}.\\
+Ein $\zeta \in \C$ mit $\zeta^n = 1$ heißt \highl{Einheitswurzel}{$n$-te Einheitswurzel}.\\
 Gegebenenfalls ist die Ordnung $d$ von $\zeta$, d.\,h. die kleinste natürliche Zahl mit $\zeta^d = 1$, ein Teiler von $n$.
 Hat $\zeta$ die Ordnung $n$, so heißt $\zeta$ \highl{Einheitswurzel!primitive}{primitive n-te Einheitswurzel}.\\
 In $\C$ hat das Polynom $X^n-1$ höchstens $n$ verschiedene Nullstellen.
 Andererseits ist $(X^n-1)' = nx^{n-1}$ zu $X^n-1$ teilerfremd.
 Daher hat $X^n-1$ keine mehrfachen Nullstellen in $\C$.
-Da $\C$ algebraisch abgeschlossen ist, enthält $\C$ also genau $n$ verschiedene n--te Einheitswurzeln.
+Da $\C$ algebraisch abgeschlossen ist, enthält $\C$ also genau $n$ verschiedene $n$-te Einheitswurzeln.
 Diese bilden eine Untergruppe $W_n$ von $\C\backslash\left\{0\right\}$.
-Als solche ist sie zyklisch, d.\,h. $W_n = \left\langle \zeta\right\rangle$ für eine primitive n--te Einheitswurzel $\zeta$.\\
+Als solche ist sie zyklisch, d.\,h. $W_n = \left\langle \zeta\right\rangle$ für eine primitive $n$-te Einheitswurzel $\zeta$.\\
 Für $k\in\N$ gilt dabei: 
 \[\ord(\zeta^k) = n \Leftrightarrow \ggt(k, n) = 1\]
 Daher enthält $\C$ genau $\varphi(n)$\footnote{Eulersche $\varphi$-Funktion} primitive $n$-te Einheitswurzel.\\
 Es ist $X^n-1 = \prod\limits_{k=1}^{n}(X-\zeta^k)$.\\
 Man nennt \[\Phi_n \coloneqq \prod_{\mystackrel{k=1}{\ggt(k, n)=1}}^{n}(X-\zeta^k) \in \C\left[X\right]\]
-das \highl{Kreisteilungspolynom}{n--te Kreisteilungspolynom}.\\
+das \highl{Kreisteilungspolynom}{$n$-te Kreisteilungspolynom}.\\
 Also $\deg\Phi_n = \varphi(n)$.
-Da jede n--te Einheitswurzel eine primitive d--te Einheitswurzel für genau einen Teiler $d$ von $n$ ist, gilt: $X^n-1 = \prod\limits_{d\mid n}\Phi_d(X)$, d.\,h. $\Phi_n = \frac{X^n-1}{\prod\limits_{\mystackrel{d\mid n}{d\neq n}}\Phi_d}$.\\
+Da jede $n$-te Einheitswurzel eine primitive $d$-te Einheitswurzel für genau einen Teiler $d$ von $n$ ist, gilt: $X^n-1 = \prod\limits_{d\mid n}\Phi_d(X)$, d.\,h. $\Phi_n = \frac{X^n-1}{\prod\limits_{\mystackrel{d\mid n}{d\neq n}}\Phi_d}$.\\
 
 Daraus kann man $\Phi_n$ induktiv berechnen:
 \[\begin{array}{lcl}
@@ -168,13 +168,13 @@ $n\in\N \Rightarrow \Phi_n$ irreduzibel in $\Q\left[X\right]$.
 Wir nehmen an: $\Phi_n$ reduzibel in $\Q\left[X\right]$.
 Nach \autoref{satz:13.3} existieren dann $\beta, \gamma \in \Z\left[X\right]$ mit $\Phi_n = \beta\gamma$, $\deg\beta, \deg\gamma < \deg\Phi_n = \deg\varphi(n)$.\\
 Dabei können wir \OE{} annehmen: $\beta$ irreduzibel in $\Q\left[X\right]$.\\
-Sei $\zeta \in\C$ Nullstelle von $\beta$, d.\,h. $\zeta$ ist eine primitive n--te Einheitswurzel in $\C$.
+Sei $\zeta \in\C$ Nullstelle von $\beta$, d.\,h. $\zeta$ ist eine primitive $n$-te Einheitswurzel in $\C$.
 Sei $p \in \PZ$ mit $p \nmid n$.
 Wir zeigen, dass $\zeta^p$ auch Nullstelle von $\beta$.\\
-(Dann folgt, dass jede primitive n--te Einheitswurzel Nullstelle von $\beta$ ist;
+(Dann folgt, dass jede primitive $n$-te Einheitswurzel Nullstelle von $\beta$ ist;
 denn jede solche hat die Form $\zeta^k$ für ein $k\in\N$ mit $\ggt(k, n)$, und $k$ läßt sich als Produkt von Primfaktoren $p_i$ mit $p_i \nmid n$ schreiben)\\
 Wir nehmen an: $\zeta^p$ keine Nullstelle von $\beta$.
-Da $\zeta^p$ eine primitive n--te Einheitswurzel ist, folgt $\gamma(\zeta^p) = 0$.
+Da $\zeta^p$ eine primitive $n$-te Einheitswurzel ist, folgt $\gamma(\zeta^p) = 0$.
 Da $\beta$ das Minimalpolynom von $\zeta$ über $\Q$ ist, folgt $\beta\mid\gamma(X^p)$.
 Schreibe $\gamma(X^p) = \beta\delta$ mit $\delta\in\Q\left[X\right]$.\\
 Da bei Division von $\gamma(X^p)$ durch das normierte Polynom $\beta \in \Z\left[X\right]$ keine Nenner auftreten ist $\delta \in\Z\left[X\right]$.\\
@@ -196,9 +196,9 @@ Widerspruch wegen $X \nmid X^n-1$ in $\F_p\left[X\right]$.
 % Bemerkung 13.4
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:13.4}
-Sei $n\in\N$ und $\zeta$ eine primitive n--te Einheitswurzel in $\C$ (z.\,B.: $\zeta = e^{\frac{2\pi i}{n}}$).
-Dann enthält $\Q(\zeta)$ alle n--ten Einheitswurzeln $1, \zeta, \zeta^2, \ldots, \zeta^{n-1}$.\\
-Daher ist $\Q(\zeta)$ Zerfällungskörper des Polynoms $X^n-1$ (und des Polynoms $\Phi_n$) über $\Q$; $\Q(\zeta)$ heißt \highl{Kreisteilungskörper}{n--ter Kreisteilungskörper}.
+Sei $n\in\N$ und $\zeta$ eine primitive $n$-te Einheitswurzel in $\C$ (z.\,B.: $\zeta = e^{\frac{2\pi i}{n}}$).
+Dann enthält $\Q(\zeta)$ alle $n$-ten Einheitswurzeln $1, \zeta, \zeta^2, \ldots, \zeta^{n-1}$.\\
+Daher ist $\Q(\zeta)$ Zerfällungskörper des Polynoms $X^n-1$ (und des Polynoms $\Phi_n$) über $\Q$; $\Q(\zeta)$ heißt \highl{Kreisteilungskörper}{$n$-ter Kreisteilungskörper}.
 Nach \autoref{satz:13.4} ist $\Phi_n$ das Minimalpolynom von $\zeta$ über $\Q$.
 Daher ist $\left[\Q(\zeta):\Q\right] = \deg\Phi_n = \deg\varphi(n)$.
 \end{bem}
@@ -235,21 +235,21 @@ Wegen $\abs{\Gal(\Q(\zeta)\mid \Q)} = \left[\Q(\zeta):\Q\right] = \varphi(n) = \
 %%%%%%%%%%%%%%%%%%%
 % Satz 13.6
 %%%%%%%%%%%%%%%%%%%
-\begin{satz}[Gauß]\label{satz:13.6}
-Ein regelmäßiges n--Eck ist genau dann mit Zirkel und Lineal konstruierbar, wenn $\varphi(n)$\footnote{Eulerische $\varphi$--Funktion} eine 2er--Potenz ist.
+\begin{satz}[\textsc{Gauß}]\label{satz:13.6}
+Ein regelmäßiges $n$-Eck ist genau dann mit Zirkel und Lineal konstruierbar, wenn $\varphi(n)$\footnote{Eulersche $\varphi$-Funktion} eine Zweierpotenz ist.
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Genau dann ist ein regelmäßiges n--Eck mit Zirkel und Lineal konstruierbar, wenn die primitive n--te Einheitswurzel $\zeta = e^{\frac{2\pi i}{n}}$ aus $0,1$ konstruierbar ist.
+Genau dann ist ein regelmäßiges $n$-Eck mit Zirkel und Lineal konstruierbar, wenn die primitive $n$-te Einheitswurzel $\zeta = e^{\frac{2\pi i}{n}}$ aus $0,1$ konstruierbar ist.
 \begin{itemize}
 	\item["`$\Rightarrow$"':] Sei $\zeta$ aus $0, 1$ konstruierbar.
 	Nach \autoref{satz:9.3} existiert eine Folge von Teilkörpern $\Q = L_0 \subseteq L_1 \subseteq \ldots \subseteq L_m \subseteq \C$ mit $\zeta \in L_m$ und $\left[L_k:L_{k-1}\right] = 2$ für alle $k$.\\
 	Wegen $\Q(\zeta) \subseteq L_m$ folgt aus dem Gradsatz (\autoref{satz:6.3}) $\varphi(n) = \left[\Q(\zeta):\Q\right]\mid\left[L_m:\Q\right] = 2^m$, insbesondere ist $\varphi(n)$ eine Potenz von $2$.
 	
-	\item["`$\Leftarrow$"':] Sei $\varphi(n)$ eine 2er--Potenz.
+	\item["`$\Leftarrow$"':] Sei $\varphi(n)$ eine Zweierpotenz.
 	Nach \autoref{satz:9.3} genügt zu zeigen, dass eine Folge von Teilkörpern $\Q = L_0 \subseteq L_1 \subseteq \dotsc \subseteq L_m = \Q(\zeta)$ mit $\left[L_k:L_{k-1}\right] = 2$ für alle $k$ existiert.
 	Nach \autoref{satz:13.5} ist $\Q(\zeta)\mid\Q$ eine Galoiserweiterung, und $G \coloneqq \Gal(\Q(\zeta)\mid\Q)$ ist abelsch der Ordnung $\varphi(n)$.\\
 	Nach dem Hauptsatz der Galoistheorie (\autoref{satz:11.4}) genügt zu zeigen, dass eine Folge von Untergruppen $G = G_0 \supseteq G_1 \supseteq \dotsc \supseteq G_m = \left\{1\right\}$ mit $\abs{G_{i-1}:G_i} = 2$ für alle $i$ existiert.
@@ -287,7 +287,7 @@ Also ist $\left\{1\right\} = G_0 \leq G_1 \leq G_2 \leq \dotsc \leq G_n = G$ ein
 \begin{bem}\label{bem:13.5}
 Sei $n \in \N$ mit Primfaktorzerlegung $n = 2^ap_1^{b_1}\ldots p_r^{b_r}$.
 Dann ist \[\varphi(n) = 2^{a-1}p_1^{b_1-1}(p_1-1)\dotsc p_r^{b_r-1}(p_r-1).\]
-Also ist $\varphi(n)$ genau dann eine 2er--Potenz, wenn $b_1 = \dotsc = b_r = 1$ und $p_1-1, \ldots, p_r-1$ Potenzen von $2$, d.\,h. $p_1, \ldots, p_r$ verschiedene Fermat--Primzahlen sind.
+Also ist $\varphi(n)$ genau dann eine Zweierpotenz, wenn $b_1 = \dotsc = b_r = 1$ und $p_1-1, \ldots, p_r-1$ Potenzen von $2$, d.\,h. $p_1, \ldots, p_r$ verschiedene Fermat-Primzahlen sind.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
@@ -326,7 +326,7 @@ Da Untergruppen von zyklischen Gruppen wieder zyklisch sind, folgt die Behauptun
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}[Dedekinds Lemma]\label{satz:13.9}
 Sei $L\mid K$ Galoiserweiterung mit Galoisgruppe $G$.
-Dann sind die Elemente in $G$ linear unabhängig im $L$--Vektorraum $Abb(L,L)$
+Dann sind die Elemente in $G$ linear unabhängig im $L$-Vektorraum $Abb(L,L)$
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
