--- a/kuelshammer-algebra1/Kapitel10.tex
+++ b/kuelshammer-algebra1/Kapitel10.tex
@@ -36,7 +36,7 @@ Jede Untergruppe von $G$ wird mit der entsprechend eingeschränkten Verknüpfung s
 Aus $H \leq G$ und $K \leq G$ folgt: $H \cap K \leq K$; allgemeiner ist der Durchschnitt von beliebigen vielen Untergruppen von $G$ wieder eine Untergruppe von $G$.\\
 Bekanntlich ist \[(\Z, +) \leq (\Q, +) \leq (\R, +) \leq (\C, +)\] und
 \[(\Q \backslash \left\{0\right\}, \cdot) \leq (\R \backslash \left\{0\right\}, \cdot) \leq (\C \backslash \left\{0\right\}, \cdot).\]
-Für jeden Körper $K$ und jeden $K$--Vektorraum $V$ ist 
+Für jeden Körper $K$ und jeden $K$-Vektorraum $V$ ist 
 \[GL(V) \coloneqq \left\{f \colon V \mapsto V \left|f \text{ linear und bijektiv}\right.\right\} \leq Sym(V).\]
 $GL(V)$ heißt \highl{Gruppe!Allgemeine Lineare (GL)}{Allgemeine lineare Gruppe} von $V$.
 
@@ -64,7 +64,7 @@ Ha = Hb & \Leftrightarrow & Ha \cap Hb \neq \varnothing \Leftrightarrow ab^{-1} 
 %%%%%%%%%%%%%%%%%%%
 % Satz 10.1
 %%%%%%%%%%%%%%%%%%%
-\begin{satz}[Lagrange 1736--1813]\label{satz:10.1}
+\begin{satz}[\textsc{Lagrange} 1736--1813]\label{satz:10.1}
 Für jede Untergruppe $H$ einer Gruppe $G$ gilt: $\abs{G} = \abs{G:H} \cdot \abs{H}$.
 Insbesondere gilt im Fall $\abs{G} < \infty$: $\abs{H}, \abs{G:H} \big|\big. \abs{G}$.
 \end{satz}
@@ -232,9 +232,9 @@ Also: $V \subseteq f(f^{-1}(V))$.
 % Beispiel 10.3
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}\label{bsp:10.3}
-Für jeden Körper $K$ und jeden $K$--Vektoraum $V$ mit Basis $b_1, \ldots, b_n$ ist die Abbildung
+Für jeden Körper $K$ und jeden $K$-Vektoraum $V$ mit Basis $b_1, \ldots, b_n$ ist die Abbildung
 \[F\colon GL(V)\mapsto GL(n, K),\]
-die jedem Vektorraum--Isomorphismus $f\colon V\mapsto V$ seine Matrix bezüglich $b_1, \ldots, b_n$ zuordnet, ein Gruppenisomorphismus.\\
+die jedem Vektorraum-Isomorphismus $f\colon V\mapsto V$ seine Matrix bezüglich $b_1, \ldots, b_n$ zuordnet, ein Gruppenisomorphismus.\\
 Daher gilt: $GL(V) \cong GL(n, K)$.
 \end{bsp}
 
