--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -188,6 +188,10 @@
 \DeclareMathOperator{\Orb}{Orb}
 \DeclareMathOperator{\Stb}{Stb}
 \DeclareMathOperator{\Syl}{Syl}
+\DeclareMathOperator{\GL}{GL}             % allgemeine lineare Gruppe
+\DeclareMathOperator{\SL}{SL}             % spezielle lineare Gruppe
+\DeclareMathOperator{\PGL}{PGL}             % projektive allgemeine lineare Gruppe
+\DeclareMathOperator{\PSL}{PSL}             % projektive spezielle lineare Gruppe
 
 
 
