Vorkommen von \plusdot und \mystackrel entfernt
Herr Kuelshammer schreibt manchmal Operatoren übereinander. Dafür wurden \plusdot und \mystackrel definiert. Im Text sah das nicht besonders gut (IMHO eher verwirrend) aus. Daher habe ich alle Vorkommen separat (eine Gleichung mit + und eine mit ·) geschrieben.

git-svn-id: https://svn.lug-jena.de/uni-skripte@2376 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -138,8 +138,6 @@
 % ordentliches :=
 \newcommand*{\coloneqq}{\mathrel{\mathop:}=}
 
-\newcommand*{\plusdot}{\ensuremath{\mathrel{+\above0pt \cdot}}}
-
 % Wenn irgendwo Unklarheiten zum Inhalt im Skript auftreten, können sie
 % einfach mit \help{Ich verstehe das nicht} hervorgehoben werden. Dies
 % macht es leichter sie alle zu finden und auch ganz einfach
@@ -166,7 +164,6 @@
 % ... und mancheinem gefällt auch das Phi nicht
 \renewcommand*{\phi}{\varphi}
 
-\newcommand*{\mystackrel}[2]{\mathrel{\genfrac{}{}{0pt}{2}{#1}{#2}}}
 \newcommand*{\labelarrow}[1]{\stackrel{#1}{\longmapsto}}
 
 
@@ -955,20 +952,25 @@ ein Ring\footnote{Hier ist das Nullelement das Einselement; aber kein
 \begin{satz}\label{satz:3.1}
   Für $m \in \N$ wird $\ZmZ{m} = \{a + m\Z \colon a \in \Z\} = \{0 +
   m\Z, 1 + m\Z, \ldots, m - 1 + m\Z\}$ zu einem kommutativen Ring mit:
-  \[(a + m\Z)~\plusdot~(b + m\Z) \coloneqq a~\plusdot~b + m\Z \qquad (a, b
-  \in \Z)\]
+  \begin{gather*}
+    (a + m\Z)+ (b + m\Z) \coloneqq a+b + m\Z\\
+    (a + m\Z)\cdot(b + m\Z) \coloneqq a\cdot b + m\Z\qquad a, b \in \Z
+  \end{gather*}
 \begin{beweis}
   Wir müssen zuerst zeigen, dass die Verknüpfungen "`wohldefiniert"'
   sind, d.\,h. nicht von der Schreibweise der Restklasse abhängen. Das
   bedeutet: aus $a + m\Z = a' + m\Z$ und $b + m\Z = b' + m\Z$ folgt:
-  \[a~\plusdot~b + m\Z = a'~\plusdot~b' + m\Z\]
+  \begin{gather*}
+    (a + m\Z)+ (b + m\Z) \coloneqq a'+b' + m\Z\\
+    (a + m\Z)\cdot(b + m\Z) \coloneqq a'\cdot b' + m\Z
+  \end{gather*}
   Sei also $a + m\Z = a' + m\Z$ und $b + m\Z = b' + m\Z$. Dann ist $a
-  \equiv a' \pmod{m}$ und $b' \equiv b \pmod{m}$, also auch $a
-  \stackrel{+}{\cdot} b \equiv a' \stackrel{+}{\cdot} b' \pmod{m}$
-  nach \autoref{satz:2.1}. Dann $a + b + m\Z = a' + b' + m\Z$. Damit
-  ist die Wohldefiniertheit gezeigt. Die Rechenregeln folgen
-  leicht. Denn z.\,B.: ist $(a + m\Z)(b + m\Z) = ab + m\Z = ba + m\Z =
-  (b + m\Z)(a + m\Z)$ für $a, b \in \Z$. Nullelement ist $0 +
+  \equiv a' \pmod{m}$ und $b' \equiv b \pmod{m}$, also auch $a + b
+  \equiv a' + b' \pmod{m}$ und $a\cdot b \equiv a' \cdot b' \pmod{m}$
+  nach \autoref{satz:2.1}. Dann ist $a + b + m\Z = a' + b' +
+  m\Z$. Damit ist die Wohldefiniertheit gezeigt. Die Rechenregeln
+  folgen leicht. Denn z.\,B.: ist $(a + m\Z)(b + m\Z) = ab + m\Z = ba
+  + m\Z = (b + m\Z)(a + m\Z)$ für $a, b \in \Z$. Nullelement ist $0 +
   m\Z$. Einselement ist $1 + m\Z$, negativ zu $a + m\Z$ ist $-a +
   m\Z$.
 \end{beweis}
@@ -2145,18 +2147,22 @@ Sei $L|K$ Körpererweiterung und $b \in L$ algebraisch über $K$ mit
 
 % Beweis
 \begin{beweis}
-\underline{Wir zeigen:} f wohldefiniert.\\
-Dazu seien $\varphi, \psi \in K[X]$ mit $\varphi + (\mu) = \psi + (\mu)$.\\
-Dann: $\psi = \varphi + \alpha\mu$ mit $\alpha \in K[X]$.\\
-Folglich: $\psi(b) = \varphi(b) + \alpha(b)\mu(b) = \varphi(b)$. Also $f$ wohldefiniert.\\
-Wegen 
-\[\begin{array}{lcl}
-f(\left[\beta + (\mu)\right] \mystackrel{+}{\cdot} \left[\gamma + (\mu)\right]) & = & f(\beta \mystackrel{+}{\cdot} \gamma + (\mu))\\
-& = & (\beta \mystackrel{+}{\cdot} \gamma)(b)\\
-& = & \beta(b) \mystackrel{+}{\cdot} \gamma(b)\\
-& = & f(\left[\beta + (\mu)\right]) \mystackrel{+}{\cdot} f(\left[\gamma + (\mu)\right])
-\end{array}\] und $f(1) = 1$ ist $f$ ein Körperhomomorphismus.
-
+  Wir zeigen, dass $f$ wohldefiniert ist.  Dazu seien $\varphi, \psi
+  \in K[X]$ mit $\varphi + (\mu) = \psi + (\mu)$.  Dann: $\psi =
+  \varphi + \alpha\mu$ mit $\alpha \in K[X]$.  Folglich: $\psi(b) =
+  \varphi(b) + \alpha(b)\mu(b) = \varphi(b)$. Also ist $f$
+  wohldefiniert.  Wegen
+  \begin{align*}
+    f([\beta + (\mu)]+ [\gamma + (\mu)]) &= f(\beta+ \gamma + (\mu)) =
+    (\beta+ \gamma)(b)\\
+    &= \beta(b)+ \gamma(b) = f([\beta + (\mu)]) + f([\gamma +
+    (\mu)])\\
+    f([\beta +(\mu)]\cdot [\gamma + (\mu)]) &= f(\beta\cdot \gamma + (\mu)) =
+    (\beta\cdot \gamma)(b)\\
+    &= \beta(b)\cdot \gamma(b) = f([\beta + (\mu)]) \cdot f([\gamma + (\mu)])
+  \end{align*}
+  und $f(1) = 1$ ist $f$ ein Körperhomomorphismus.
+  
 Wegen $K[X]/\mu = \left\{a_0 + a_1X + \dotsc + a_{n-1}X^{n-1} + (\mu) \colon a_0, \ldots, a_{n-1} \in K\right\}$ ist $Bld(f) = \left\{a_0 + a_1b + \dotsc + a_{n-1}b^{n-1} \colon a_0, \ldots, a_{n-1} \in K\right\} \subseteq L$ Teilkörper. Wegen $K \subseteq Bld(f)$ und $b \in Bld(f)$ ist $K(b) \subseteq Bld(f)$.\\
 Andererseits ist $Bld(f)$ in jedem Teilkörper von $L$ enthalten, der $K$ und $b$ enthält. Also ist $Bld(f) \subseteq K(b) \Rightarrow Bld(f) = K(b)$.\\
 Also ist $f$ Körperhomomorphismus.\\
@@ -2194,15 +2200,18 @@ $F$ heißt \highl{Algebraischer Abschluss} von $K$ in $L$.
 	\item \begin{itemize}
 	\item["`$\Rightarrow$"'] Sei $M|K$ algebraisch. Dann ist jedes $b \in M$ algebraisch über $K$,also auch über $L$. Daher ist $M:L$ algebraisch. Ferner ist jedes $b \in L$ algebraisch über $K$ und daher ist auch $L|K$ algebraisch.\\
 	\item["`$\Leftarrow$"'] Seien $M|L$, $L|K$ algebraisch, und sei $c \in M$.\\
-	Dann exisitiert $b_0, \ldots, b_{n-1} \in L$ mit $c^n + b_{n-1}c^{n-1} + \dotsc + b_1c + b_0 = 0$.\\
+	Dann existiert $b_0, \ldots, b_{n-1} \in L$ mit $c^n + b_{n-1}c^{n-1} + \dotsc + b_1c + b_0 = 0$.\\
 	Daher ist $c$ algebraisch über $K(b_0, \ldots, b_{n-1})$. Nach \autoref{satz:7.2} ist \[\left[\underbrace{(K(b_0, \ldots, b_{n-1}))(c)}_{= K(b_0, \ldots, b_{n-1}, c)}:K(b_0, \ldots, b_{n-1})\right] < \infty\]
 	Nach dem Beweis von (i) ist $\left[K(b_0, \ldots, b_{n-1}):K\right] < \infty$.\\
 	Gradsatz: $\left[K(b_0, \ldots, b_{n-1}, c):K\right] < \infty$.\\
 	\autoref{bsp:7.3}: $K(b_0, \ldots, b_{n-1}, c)|K$ algebraisch; insbesondere $c$ algebraisch über $K$.
-	\item Nach \autoref{bsp:7.1} ist $K \subseteq F$; insbesondere sind $0, 1 \in F$. Seien $b, c \in F$.\\
-	Nach (i) ist $K(b, c)|K$ algebraisch; insbesondere $b \mystackrel{\pm}{\cdot} c \in K(b, c)$ algebraisch über $K$, also $b \mystackrel{\pm}{\cdot} c \in F$.\\
-	Analog $\frac{b}{c} \in F$, falls $c \neq 0$.\\
-	Daher: $F$ Teilkörper.
+	\item Nach \autoref{bsp:7.1} ist $K \subseteq F$. Insbesondere
+          sind $0, 1 \in F$. Seien nun $b, c \in F$. Nach dem
+          Punkt~(i) ist $K(b, c)|K$ algebraisch und insbesondere $b
+          \pm c \in K(b, c)$ sowie $b\cdot c\in K(b,c)$ algebraisch
+          über $K$. Also $b\pm c \in F$ und $b\cdot c\in F$. Analog
+          ist auch $\frac{b}{c} \in F$, falls $c \neq 0$. Daher ist
+          $F$ ein Teilkörper.
 	\end{itemize}
 \end{enumerate}
 \end{beweis}
