varphi durch phi in allen Kapitel*-Dateien ersetzt
git-svn-id: https://svn.lug-jena.de/uni-skripte@2386 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/Kapitel17.tex
+++ b/kuelshammer-algebra1/Kapitel17.tex
@@ -52,8 +52,8 @@ Für $m\in\N$ sei $\Phi_m$ das $m$-te Kreisteilungspolynom (also $\Phi_m\in\Z\lef
 Bekanntlich ist $X^m-1 = \prod\limits_{d\mid m}\Phi_d$, also $q^m-1=\prod\limits_{d\mid m}\Phi_d(q)$, wegen $\Phi_n(q)\mid q^n-1$ und $\Phi_n(q)\mid\frac{q^n-1}{q^{n_i}-1}$.
 Insbesondere $\Phi_n(q)\mid q-1$, d.\,h. $\abs{\Phi_n(q)}\leq q-1$.\\
 Wir nehmen an: $D$ nicht kommutativ, d.\,h. $n>1$.
-Dann $\Phi_n(q) = \prod\limits_{j=1}^{\varphi(n)}(q-\zeta_j)$, wobei $\zeta_1,\ldots,\zeta_{\varphi(n)}$ die primitiven $n$-Einheitswurzeln in $\C$ sind.\\
-Schreibe $\zeta_j=a_j+ib_j$ mit $a_j,b_j\in\R$ $(j=1,\ldots,\varphi(n))$.
+Dann $\Phi_n(q) = \prod\limits_{j=1}^{\phi(n)}(q-\zeta_j)$, wobei $\zeta_1,\ldots,\zeta_{\phi(n)}$ die primitiven $n$-Einheitswurzeln in $\C$ sind.\\
+Schreibe $\zeta_j=a_j+ib_j$ mit $a_j,b_j\in\R$ $(j=1,\ldots,\phi(n))$.
 Wegen $n>1$ ist $\zeta_j\neq 1$, d.\,h. $a_j<1$.
 Daher:
 \[\begin{array}{lcl}
