--- a/kuelshammer-algebra1/Kapitel12.tex
+++ b/kuelshammer-algebra1/Kapitel12.tex
@@ -7,7 +7,7 @@ Wir ändern unsere Sichtweise!
 
 \emph{Bisher:} $L\mid K$ Körpererweiterung $\hookrightarrow b \in L$ algebraisch über $K \Rightarrow$ Minimalpolynom $\mu$ von $b$ über $K$.
 
-\emph{Jetzt:} $K$ Körper, $\varphi \in K\left[X\right]$ $\Rightarrow$ konstruiere Erweiterungskörper $L \supseteq K$ und Element $b \in L$ mit $\varphi(b) = 0$.
+\emph{Jetzt:} $K$ Körper, $\phi \in K\left[X\right]$ $\Rightarrow$ konstruiere Erweiterungskörper $L \supseteq K$ und Element $b \in L$ mit $\phi(b) = 0$.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
@@ -21,51 +21,51 @@ Man kommt von $\R$ zu $\C$ dadurch, dass man Nullstellen von $X^2 + 1 = 0$ sucht
 % Satz 12.1
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:12.1}
-Sei $K$ Körper und $\varphi \in K\left[X\right]$ irreduzibel.
-Dann existiert immer ein Ergänzungskörper $L \supseteq K$, in dem $\varphi$ eine Nullstelle hat.
+Sei $K$ Körper und $\phi \in K\left[X\right]$ irreduzibel.
+Dann existiert immer ein Ergänzungskörper $L \supseteq K$, in dem $\phi$ eine Nullstelle hat.
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-(Gegebenenfalls ist $K(b) \cong K\left[X\right] / (\varphi)$; wir werden Daher versuchen, $L$ auf diese Weise zu konstruieren.)\\
-Da $\varphi \in K\left[X\right]$ irreduzibel ist, ist $\widetilde{L} \coloneqq K\left[X\right]/(\varphi)$ ein Körper, und $\sigma\colon K\mapsto \widetilde{L}$, $a\mapsto a + (\varphi)$, ein Ringhomomorphismus.\\
-Für $0 \neq a \in K$ ist dabei $\sigma(a)\sigma(a^{-1}) = \sigma(aa^{-1}) = \sigma(1) = 1 + (\varphi) = 1_{\widetilde{L}}$, d.\,h. $\sigma(a) \neq 0$.\\
+(Gegebenenfalls ist $K(b) \cong K\left[X\right] / (\phi)$; wir werden Daher versuchen, $L$ auf diese Weise zu konstruieren.)\\
+Da $\phi \in K\left[X\right]$ irreduzibel ist, ist $\widetilde{L} \coloneqq K\left[X\right]/(\phi)$ ein Körper, und $\sigma\colon K\mapsto \widetilde{L}$, $a\mapsto a + (\phi)$, ein Ringhomomorphismus.\\
+Für $0 \neq a \in K$ ist dabei $\sigma(a)\sigma(a^{-1}) = \sigma(aa^{-1}) = \sigma(1) = 1 + (\phi) = 1_{\widetilde{L}}$, d.\,h. $\sigma(a) \neq 0$.\\
 Daher ist $\widetilde{K} \coloneqq \sigma(K)$ ein zu $K$ isomorpher Körper.\\
 Sei $Y$ eine neue Unbestimmte.
 Dann ist die Abbildung $\Phi\colon K\left[X\right] \mapsto \widetilde{K}\left[Y\right]$, $\sum\limits_{i = 0}^{\infty}a_iX^i\mapsto \sum\limits_{i = 0}^{\infty}\sigma(a_i)Y^i$ ein Ringhomomorphismus.
-Daher ist $\widetilde{\varphi} = Y^n + (a_{n-1} + (\varphi))Y^{n-1} + \dotsc + (a_1 + (\varphi))Y + (a_0 + (\varphi))$.\\
-Für $\widetilde{b} \coloneqq X + (\varphi) \in \widetilde{L}$ gilt also:
+Daher ist $\widetilde{\phi} = Y^n + (a_{n-1} + (\phi))Y^{n-1} + \dotsc + (a_1 + (\phi))Y + (a_0 + (\phi))$.\\
+Für $\widetilde{b} \coloneqq X + (\phi) \in \widetilde{L}$ gilt also:
 \[\begin{array}{lcl}
-	\widetilde{\varphi}(\widetilde{b}) & = & (X + (\varphi))^n + (a_{n-1} + (\varphi))(X + (\varphi))^{n-1} + \dotsc + (a_1 + (\varphi))(X + (\varphi)) + (a_0 + (\varphi))\\
-	& = & X^n + a_{n-1}X^{n-1} + \dotsc + a_1X + a_0 + (\varphi)\\
-	& = & \varphi + (\varphi) = 0
+	\widetilde{\phi}(\widetilde{b}) & = & (X + (\phi))^n + (a_{n-1} + (\phi))(X + (\phi))^{n-1} + \dotsc + (a_1 + (\phi))(X + (\phi)) + (a_0 + (\phi))\\
+	& = & X^n + a_{n-1}X^{n-1} + \dotsc + a_1X + a_0 + (\phi)\\
+	& = & \phi + (\phi) = 0
 \end{array}\]
-Daher erfüllen der zu $K$ isomorphe Körper $\widetilde{K}$ und das $\varphi$ entsprechende Polynom $\widetilde{\varphi} \in \widetilde{K}\left[Y\right]$ die Behauptung des Satzes.
-Analoges gilt also für $K$ und $\varphi$.
+Daher erfüllen der zu $K$ isomorphe Körper $\widetilde{K}$ und das $\phi$ entsprechende Polynom $\widetilde{\phi} \in \widetilde{K}\left[Y\right]$ die Behauptung des Satzes.
+Analoges gilt also für $K$ und $\phi$.
 \end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
 % Satz 12.2
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:12.2}
-Sei $K$ ein Körper und $\varphi \in K\left[X\right]$.
-Dann existiert ein Erweiterungskörper $L \supseteq K$, der Zerfällungskörper von $\varphi$ über $K$ ist.
+Sei $K$ ein Körper und $\phi \in K\left[X\right]$.
+Dann existiert ein Erweiterungskörper $L \supseteq K$, der Zerfällungskörper von $\phi$ über $K$ ist.
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-(Induktion nach $n \coloneqq \deg{\varphi}$)\\
+(Induktion nach $n \coloneqq \deg{\phi}$)\\
 Im Fall $n \leq 0$ kann man $L \coloneqq K$ nehmen.
 Sei also $n > 0$.
-Nach \autoref{satz:12.1} existiert ein Erweiterungskörper $F \supseteq K$, in dem $\varphi$ eine Nullstelle $b$ hat;
+Nach \autoref{satz:12.1} existiert ein Erweiterungskörper $F \supseteq K$, in dem $\phi$ eine Nullstelle $b$ hat;
 \OE{} $F = K(b)$.
-Schreibe $\varphi = (X - b)\psi$ mit $\psi \in F\left[X\right]$.
+Schreibe $\phi = (X - b)\psi$ mit $\psi \in F\left[X\right]$.
 Wegen $\deg{\psi} = n-1$ existiert nach Induktion ein Erweiterungskörper $L \supseteq F$, der Zerfällungskörper von $\psi$ über $F$ ist.
-Dann ist $L$ auch Zerfällungskörper von $\varphi$ über $K$.
+Dann ist $L$ auch Zerfällungskörper von $\phi$ über $K$.
 \end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
@@ -92,10 +92,10 @@ Für einen Körper $K$ und ein irreduzibles Polynom $\pi \in K\left[X\right]$ sind
 	Da $\pi$ irreduzibel ist, folgt $\pi\mid\pi'$.
 	Wegen $\deg{\pi'} < \deg{\pi}$ folgt: $\pi' = 0$.
 	
-	\item[$\underline{(2) \Rightarrow (1)}$:] Sei $\pi' = 0$, $L$ Zerfällungskörper von $\pi$ über $K$ und $b \in L$ Nullstelle von $\varphi$.
-	Schreibe $\pi = (X - b)\varphi$ mit $\varphi \in L\left[X\right]$.
-	Dann: $0 = \pi' = (X - b)\varphi' + \varphi$.
-	Einsetzen von $b$ ergibt: $0 = \varphi(b)$.
+	\item[$\underline{(2) \Rightarrow (1)}$:] Sei $\pi' = 0$, $L$ Zerfällungskörper von $\pi$ über $K$ und $b \in L$ Nullstelle von $\phi$.
+	Schreibe $\pi = (X - b)\phi$ mit $\phi \in L\left[X\right]$.
+	Dann: $0 = \pi' = (X - b)\phi' + \phi$.
+	Einsetzen von $b$ ergibt: $0 = \phi(b)$.
 	Daher ist $b$ mehrfache Nullstelle von $\pi$.
 \end{itemize}
 \end{beweis}
@@ -104,9 +104,9 @@ Für einen Körper $K$ und ein irreduzibles Polynom $\pi \in K\left[X\right]$ sind
 % Bemerkung 12.2
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:12.2}
-Sei $\varphi \in K\left[X\right]$ mit $\varphi' = 0$.
-Im Fall $\chr{(K)} = 0$ ist dann $\varphi$ ein konstantes Polynom.
-Im Fall $\chr{(K)} = p > 0$ hat $\varphi$ die Form $\varphi = \sum\limits_{i = 0}^{\infty}a_iX^{ip}$ $(a_i \in K)$.
+Sei $\phi \in K\left[X\right]$ mit $\phi' = 0$.
+Im Fall $\chr{(K)} = 0$ ist dann $\phi$ ein konstantes Polynom.
+Im Fall $\chr{(K)} = p > 0$ hat $\phi$ die Form $\phi = \sum\limits_{i = 0}^{\infty}a_iX^{ip}$ $(a_i \in K)$.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
@@ -115,25 +115,25 @@ Im Fall $\chr{(K)} = p > 0$ hat $\varphi$ die Form $\varphi = \sum\limits_{i = 0
 \begin{defi}\label{defi:12.1}
 Sei $K$ Körper.
 Ein irreduzibles Polynom $\pi \in K\left[X\right]$ heißt \highl{Polynom!seperabel}{seperabel} über $K$, falls $\pi' \neq 0$ ist.
-Ein beliebiges Polynom $\varphi \in K\left[X\right]$ heißt seperabel über $K$, wenn seine irreduziblen Teiler (Primfaktoren) sperabel über $K$ sind.\\
+Ein beliebiges Polynom $\phi \in K\left[X\right]$ heißt seperabel über $K$, wenn seine irreduziblen Teiler (Primfaktoren) sperabel über $K$ sind.\\
 Ein algebraisches Element $b$ in einem Erweiterungskörper $L \supseteq K$ heißt seprerabel über $K$, falls sein Minimalpolynom über $K$ seperabel über $K$ ist.\\
 Eine algebraische Körpererweiterung $L\mid K$ heißt \highl{Algebraische Körpererweiterung!seperabel}{seperabel}, falls jedes Element in $L$ seperabel über $K$ ist.
 \end{defi}
 
 \underline{Wichtiges Kriterium für Galoiserweiterung:} (\autoref{satz:11.8}, \autoref{satz:12.2})\\
-$L\mid K$ Körpererweiterung, $L$ Zerfällungskörper von $\varphi \in K\left[X\right]$, für jeden Primfaktor $\pi$ von $\varphi$ in $K\left[X\right]$ sei $\pi' \neq 0$.
+$L\mid K$ Körpererweiterung, $L$ Zerfällungskörper von $\phi \in K\left[X\right]$, für jeden Primfaktor $\pi$ von $\phi$ in $K\left[X\right]$ sei $\pi' \neq 0$.
 Dann $L\mid K$ Galoiserweiterung.\\
-Beachte: $\varphi \in K\left[X\right]$.
-Dann $\varphi' = \Leftrightarrow \left\{\begin{array}{lcl}\varphi & = & a \in K \text{ konstant, } \chr(K) = 0\\ \varphi & = & \sum\limits_{i = 0}^{\infty}a_iX^{ip}, \chr(K) = p > 0\end{array}\right.$
+Beachte: $\phi \in K\left[X\right]$.
+Dann $\phi' = \Leftrightarrow \left\{\begin{array}{lcl}\phi & = & a \in K \text{ konstant, } \chr(K) = 0\\ \phi & = & \sum\limits_{i = 0}^{\infty}a_iX^{ip}, \chr(K) = p > 0\end{array}\right.$
 
 %%%%%%%%%%%%%%%%%%%
 % Beispiel 12.2
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}\label{bsp:12.2}
 \begin{enumerate}[(i)]
-	\item $\chr(K) = 0 \Rightarrow$ jedes $\varphi \in K\left[X\right]$ seperabel über $K$.
+	\item $\chr(K) = 0 \Rightarrow$ jedes $\phi \in K\left[X\right]$ seperabel über $K$.
 	
-	\item Ist $K$ endlich, so ist jedes $\varphi \in K\left[X\right]$ seperabel über $K$;
+	\item Ist $K$ endlich, so ist jedes $\phi \in K\left[X\right]$ seperabel über $K$;
 	zum Beweis sei $\pi \in K\left[X\right]$ irreduzibel über $K$ mit $\pi' = 0$.\\
 	Sei $p \coloneqq \chr(K)$ und $f\colon K\mapsto K$, $a\mapsto a^p$, der Frobenius-Automorphismus.
 	Schreibe $\pi = \sum\limits_{i = 0}^{\infty}a_iX^{ip}$ $(a_i \in K)$.
@@ -151,28 +151,28 @@ Dann $\varphi' = \Leftrightarrow \left\{\begin{array}{lcl}\varphi & = & a \in K 
 % Satz 12.4
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:12.4}
-Jedes $\varphi \in \R\left[X\right]\backslash \R$ hat in $\C$ eine Nullstelle\footnote{Abschwächung des Fundamentalsatzes der Algebra}.
+Jedes $\phi \in \R\left[X\right]\backslash \R$ hat in $\C$ eine Nullstelle\footnote{Abschwächung des Fundamentalsatzes der Algebra}.
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Sei $n \coloneqq \deg\varphi$.
+Sei $n \coloneqq \deg\phi$.
 Schreibe: $n = 2^km$ $(k, m \in \N_0, 2\nmid m)$.\\
 Wir machen Induktion nach $k$.
-Im Fall $k = 0$ ist $\deg\varphi$ ungerade.\\
-Nach dem Zwischenwertsatz der Analysis hat $\varphi$ eine reelle Nullstelle.\\
+Im Fall $k = 0$ ist $\deg\phi$ ungerade.\\
+Nach dem Zwischenwertsatz der Analysis hat $\phi$ eine reelle Nullstelle.\\
 Sei also $k > 0$.
-Nach \autoref{satz:12.2} exisitiert ein Erweiterungskörper $L \supseteq \C$, der Zerfällungskörper von $\varphi$ über $\C$ ist.
-Dann ist $L$ Zerfällungskörper von $(X^2 + 1)\varphi$ über $\R$.
-Wegen $\chr{\R} = 0$ ist $(X^2 + 1)\varphi$ seperabel über $\R$, d.\,h. die Primfaktoren von $(X^2 + 1)\varphi$ haben in $L$ keine Mehrfachen Nullstellen.
+Nach \autoref{satz:12.2} exisitiert ein Erweiterungskörper $L \supseteq \C$, der Zerfällungskörper von $\phi$ über $\C$ ist.
+Dann ist $L$ Zerfällungskörper von $(X^2 + 1)\phi$ über $\R$.
+Wegen $\chr{\R} = 0$ ist $(X^2 + 1)\phi$ seperabel über $\R$, d.\,h. die Primfaktoren von $(X^2 + 1)\phi$ haben in $L$ keine Mehrfachen Nullstellen.
 Nach \autoref{satz:11.8} ist $L\mid \R$ eine Galoiserweiterung.\\
 Für $\sigma \in G \coloneqq \Gal{L\mid\R}$ ist $\widetilde{\sigma}\colon L\left[X\right] \mapsto L\left[X\right]$, $\sum\limits_{i = 0}^{\infty}\sigma(a_i)X^i \mapsto \sum\limits_{i = 0}^{\infty}\sigma(a_i)X^i$ ein Ringautomorphismus.\\
-Schreibe $\varphi = a(X - b_i) - (X - b_n)$ $(a \in \R, b_1, \ldots, b_n \in L)$.\\
+Schreibe $\phi = a(X - b_i) - (X - b_n)$ $(a \in \R, b_1, \ldots, b_n \in L)$.\\
 Betrachte für jedes $c \in \R$ des Polynomes $\psi_c \coloneqq \prod\limits_{i < j}(X - b_i - b_j - cb_ib_j) \in L\left[X\right]$.\\
-Für $\sigma \in G$ ist $\widetilde{\sigma}(\varphi) = \varphi$ wegen $\varphi \in \R\left[X\right]$.
-Daher permutiert $\widetilde{\varphi}$ die Faktoren $X-b_1, \ldots, X-b_n$ von $\varphi$, d.\,h. $\sigma$ permutiert $b_1, \ldots, b_n$.
+Für $\sigma \in G$ ist $\widetilde{\sigma}(\phi) = \phi$ wegen $\phi \in \R\left[X\right]$.
+Daher permutiert $\widetilde{\phi}$ die Faktoren $X-b_1, \ldots, X-b_n$ von $\phi$, d.\,h. $\sigma$ permutiert $b_1, \ldots, b_n$.
 Daher permutiert $\widetilde{\sigma}$ die Faktoren $X-b_i-b_j-cb_ib_j$ von $\psi_c$.
 Also: $\widetilde{\sigma}(\psi_c) = \psi_c$, d.\,h. die Koeffizienten von $\psi_c$ liegen in $\Fix{(G)} = \R$.
 Floglich: $\psi_c \in \R\left[X\right]$, $\deg\psi_c = \begin{pmatrix}n\\2\end{pmatrix} = \frac{n}{2}(n-1)$;
@@ -201,9 +201,9 @@ $\C$ ist algebraisch abgeschlossen.
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Sei $\varphi \in \C\left[X\right]\backslash \C$, also $\varphi\overline{\varphi} \in \R\left[X\right]\backslash \R$.\\
-Nach \autoref{satz:12.4} hat $\varphi\overline{\varphi}$ eine Nullstelle $z \in \C$.
-Also: $\varphi(z) = 0$ oder $\overline{\varphi}(z) = 0$ (d.\,h. $\varphi(\overline{z}) = 0$).
+Sei $\phi \in \C\left[X\right]\backslash \C$, also $\phi\overline{\phi} \in \R\left[X\right]\backslash \R$.\\
+Nach \autoref{satz:12.4} hat $\phi\overline{\phi}$ eine Nullstelle $z \in \C$.
+Also: $\phi(z) = 0$ oder $\overline{\phi}(z) = 0$ (d.\,h. $\phi(\overline{z}) = 0$).
 \end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
@@ -213,7 +213,7 @@ Also: $\varphi(z) = 0$ oder $\overline{\varphi}(z) = 0$ (d.\,h. $\varphi(\overli
 \begin{enumerate}[(i)]
 	\item Folglich ist jedes irreduzible Polynom in $\C\left[X\right]$ linear, d.\,h. von der Form $X-b$ mit $b \in \C$.
 	
-	\item Für jedes irreduzible Polynom $\varphi \in \R\left[X\right]$ ist $\deg\varphi \leq 2$;
-	denn $\varphi$ hat eine Nullstelle $b \in \C$. Folglich: $\deg\varphi = \left[\R(b):\R\right] \leq \left[\C :\R\right] = 2$.
+	\item Für jedes irreduzible Polynom $\phi \in \R\left[X\right]$ ist $\deg\phi \leq 2$;
+	denn $\phi$ hat eine Nullstelle $b \in \C$. Folglich: $\deg\phi = \left[\R(b):\R\right] \leq \left[\C :\R\right] = 2$.
 \end{enumerate}
 \end{bem}
