--- a/kuelshammer-algebra1/Kapitel5.tex
+++ b/kuelshammer-algebra1/Kapitel5.tex
@@ -5,44 +5,44 @@ $K$ Körper
 % Bemerkung
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}[vergleiche lineare Algebra]
-Ein \highl{Polynom} mit Koeffizienten in $K$ ist eine Folge $\varphi = (a_0, a_1, a_2, \ldots)$ von Elementen $a_i \in K$ mit $\left|\left\{i \in \N_0 \colon a_i \neq 0\right\}\right| < \infty$.\\
-Diese Polynome bilden einen $K$-Vektorraum $P$ mit $\varphi + \psi loneqq (a_0 + b_0, a_1 + b_1, \ldots)$, $r\varphi loneqq (ra_0, ra_1, \ldots)$ für $\varphi = (a_0, a_1, \ldots)$, $\psi loneqq (b_0, b_1, \ldots) \in P, r \in K$.\\
-Setzt man $\varphi\psi = (c_0, c_1, c_2, \ldots)$ mit $c_0 = a_0b_0$, $c_1 = a_0b_1 + a_1b_0, \ldots, c_i loneqq \sum\limits_{j + k = i}a_jb_k, \ldots$, so wird $P$ zu einem kommutativen Ring (\highl{Polynomring}) mit $r(\varphi\psi) = (r\varphi)\psi = \varphi(r\psi)$ für $r \in K, \ \varphi, \psi \in P$.\\
+Ein \highl{Polynom} mit Koeffizienten in $K$ ist eine Folge $\phi = (a_0, a_1, a_2, \ldots)$ von Elementen $a_i \in K$ mit $\left|\left\{i \in \N_0 \colon a_i \neq 0\right\}\right| < \infty$.\\
+Diese Polynome bilden einen $K$-Vektorraum $P$ mit $\phi + \psi loneqq (a_0 + b_0, a_1 + b_1, \ldots)$, $r\phi loneqq (ra_0, ra_1, \ldots)$ für $\phi = (a_0, a_1, \ldots)$, $\psi loneqq (b_0, b_1, \ldots) \in P, r \in K$.\\
+Setzt man $\phi\psi = (c_0, c_1, c_2, \ldots)$ mit $c_0 = a_0b_0$, $c_1 = a_0b_1 + a_1b_0, \ldots, c_i loneqq \sum\limits_{j + k = i}a_jb_k, \ldots$, so wird $P$ zu einem kommutativen Ring (\highl{Polynomring}) mit $r(\phi\psi) = (r\phi)\psi = \phi(r\psi)$ für $r \in K, \ \phi, \psi \in P$.\\
 Nullelement in $P$ ist das Nullpolynom $(0, 0, \ldots)$, Einselement das Einspolynom $(1, 0, 0, \ldots)$.\\
-Ferner heißt $X loneqq (0, 1, 0, \ldots)$ Unbestimmte oder Variable. Für $\varphi = (a_0, a_1, a_2, \ldots) \in P$ ist $\varphi X = (0, a_0, a_1, \ldots)$, insbesondere ist $X^2 = (0, 0, 1, 0, \ldots)$, $X^3 = (0, 0, 0, 1, 0, \ldots)$ u.\,s.\,w.\\
-Wegen $\left|\left\{i \in \N_0 \colon a_i \neq 0\right\}\right| < \infty$ ist also $\varphi = \sum\limits_{i = 0}^{\infty}a_iX^i$, dabei ist wie üblich $X^0$ das Einspolynom. Daher kann man jedes Element in $P$ in der Form $\varphi = \sum\limits_{i = 0}^{\infty}a_iX^i$ mit eindeutig bestimmten Koeffizienten $a_i \in K$ schreiben, von denen nur endlich viele von $0$ verschieden sind. Dies werden wir in Zukunft stets tun. Für $\varphi = \sum\limits_{i = 0}^{\infty}a_iX^i$, $\psi = \sum\limits_{i = 0}^{\infty}b_iX^i \in P$ und $r \in K$ gilt dann:\\
+Ferner heißt $X loneqq (0, 1, 0, \ldots)$ Unbestimmte oder Variable. Für $\phi = (a_0, a_1, a_2, \ldots) \in P$ ist $\phi X = (0, a_0, a_1, \ldots)$, insbesondere ist $X^2 = (0, 0, 1, 0, \ldots)$, $X^3 = (0, 0, 0, 1, 0, \ldots)$ u.\,s.\,w.\\
+Wegen $\left|\left\{i \in \N_0 \colon a_i \neq 0\right\}\right| < \infty$ ist also $\phi = \sum\limits_{i = 0}^{\infty}a_iX^i$, dabei ist wie üblich $X^0$ das Einspolynom. Daher kann man jedes Element in $P$ in der Form $\phi = \sum\limits_{i = 0}^{\infty}a_iX^i$ mit eindeutig bestimmten Koeffizienten $a_i \in K$ schreiben, von denen nur endlich viele von $0$ verschieden sind. Dies werden wir in Zukunft stets tun. Für $\phi = \sum\limits_{i = 0}^{\infty}a_iX^i$, $\psi = \sum\limits_{i = 0}^{\infty}b_iX^i \in P$ und $r \in K$ gilt dann:\\
 \begin{itemize}
-	\item $\varphi = \psi \Leftrightarrow a_i = b_i \text{ für alle } i$
-	\item $\varphi + \psi = \sum\limits_{i = 0}^{\infty}(a_i + b_i)X^i$
-	\item $r\varphi = \sum\limits_{i = 0}^{\infty}(ra_i)X^i$
-	\item $\varphi\psi = \sum\limits_{i = 0}^{\infty}(\sum\limits_{j + k = i}a_jb_k)X^i$
+	\item $\phi = \psi \Leftrightarrow a_i = b_i \text{ für alle } i$
+	\item $\phi + \psi = \sum\limits_{i = 0}^{\infty}(a_i + b_i)X^i$
+	\item $r\phi = \sum\limits_{i = 0}^{\infty}(ra_i)X^i$
+	\item $\phi\psi = \sum\limits_{i = 0}^{\infty}(\sum\limits_{j + k = i}a_jb_k)X^i$
 \end{itemize}
 Statt $P$ schreiben wir von jetzt ab $K[X]$.\\
-Ist $0 \neq \varphi = \sum\limits_{i = }^{\infty}a_iX^i \in K[X]$, so heißt $d = \deg\varphi = \max{\left\{i \in \N_0 \colon a_i \neq 0\right\}}$ Grad von $\varphi$. Dann ist $\varphi = \sum\limits_{i = 0}^da_iX^i$.\\
+Ist $0 \neq \phi = \sum\limits_{i = }^{\infty}a_iX^i \in K[X]$, so heißt $d = \deg\phi = \max{\left\{i \in \N_0 \colon a_i \neq 0\right\}}$ Grad von $\phi$. Dann ist $\phi = \sum\limits_{i = 0}^da_iX^i$.\\
 Das Nullpolynom erhält den Grad $-\infty$.\\
-Für $\varphi, \psi \in K[X]$ und $0 \neq r \in K$ gilt dann:
+Für $\phi, \psi \in K[X]$ und $0 \neq r \in K$ gilt dann:
 \begin{enumerate}[(i)]
-	\item $\deg{(r\varphi)} = \deg{(\varphi)}$
-	\item $\deg{(\varphi + \psi)} \leq \max{\left\{\deg\varphi, \deg\psi\right\}}$
-	\item $\deg{(\varphi)} \neq \deg{(\psi)} \Rightarrow \deg{(\varphi + \psi)} = \max{\left\{\deg{(\varphi)}, \deg{(\psi)}\right\}}$
-	\item $\deg{(\varphi\psi)} = \deg\varphi + \deg\psi$
+	\item $\deg{(r\phi)} = \deg{(\phi)}$
+	\item $\deg{(\phi + \psi)} \leq \max{\left\{\deg\phi, \deg\psi\right\}}$
+	\item $\deg{(\phi)} \neq \deg{(\psi)} \Rightarrow \deg{(\phi + \psi)} = \max{\left\{\deg{(\phi)}, \deg{(\psi)}\right\}}$
+	\item $\deg{(\phi\psi)} = \deg\phi + \deg\psi$
 \end{enumerate}
 Für $r, s \in K$ ist $rX^0 \pm sX^0 = (r + s)X^0$.\\
-Daher können wir jeweils $r \in K$ mit $rX^0 \in K[X]$ identifizieren und so $K$ als Teilmenge von $K[X]$ auffassen. Dann nennt man die Elemente in $K$ auch die konstanten Polynome von $K[X]$. Ist $0 \neq \varphi = \sum\limits_{i = 0}^{\infty}a_iX^i \in K[X]$, $d = \deg{(\varphi)}$ und $a_d = 1$, so heißt $\varphi$ normiert. Außerdem betrachtet man das Nullpolynom als normiert. Wir für $\Z$ hat man:
+Daher können wir jeweils $r \in K$ mit $rX^0 \in K[X]$ identifizieren und so $K$ als Teilmenge von $K[X]$ auffassen. Dann nennt man die Elemente in $K$ auch die konstanten Polynome von $K[X]$. Ist $0 \neq \phi = \sum\limits_{i = 0}^{\infty}a_iX^i \in K[X]$, $d = \deg{(\phi)}$ und $a_d = 1$, so heißt $\phi$ normiert. Außerdem betrachtet man das Nullpolynom als normiert. Wir für $\Z$ hat man:
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
 % Satz 5.1
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}[Division mit Rest]\label{satz:5.1}
-Seien $\varphi, \psi \in K[X]$ mit $\psi \neq 0$. Dann existiert eindeutig bestimmtes $\kappa, \rho \in K[X]$ mit $\varphi = \kappa\psi + \rho$ und $\deg\rho < \deg\varphi$.
+Seien $\phi, \psi \in K[X]$ mit $\psi \neq 0$. Dann existiert eindeutig bestimmtes $\kappa, \rho \in K[X]$ mit $\phi = \kappa\psi + \rho$ und $\deg\rho < \deg\phi$.
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
 % Definition
 %%%%%%%%%%%%%%%%%%%
 \begin{defi}
-$\kappa$ Quotient, $\rho$ Rest. Im Fall $\rho = 0$ schreibt man $\kappa = \frac{\varphi}{\psi}$
+$\kappa$ Quotient, $\rho$ Rest. Im Fall $\rho = 0$ schreibt man $\kappa = \frac{\phi}{\psi}$
 \end{defi}
 
 %%%%%%%%%%%%%%%%%%%
@@ -56,19 +56,19 @@ $X^5 + X^4 + X^3 + X^2 + X + 1 = (X^3 - X^2 - 1)\underbrace{(X^2 + 2X + 3)}_{\ka
 % Bemerkung
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}
-Seien $\varphi, \psi \in K[X]$. Man nennt $\varphi$ Teiler von $\psi$ und schreibt $\varphi\mid\psi$, falls $\psi \equiv \varphi\omega$ für ein $\omega \in K[X]$ ist.\\
+Seien $\phi, \psi \in K[X]$. Man nennt $\phi$ Teiler von $\psi$ und schreibt $\phi\mid\psi$, falls $\psi \equiv \phi\omega$ für ein $\omega \in K[X]$ ist.\\
 Dabei gilt wie in $\Z$:
 \begin{enumerate}[(i)]
-	\item $\varphi\mid 0$, $1\mid\varphi$, $\varphi\mid\varphi$
-	\item $\varphi\mid\psi \wedge \psi\mid\omega \Rightarrow \varphi\mid\omega$
-	\item $\varphi\mid\psi \Rightarrow c\varphi\mid d\psi \ \ (c, d \in \kappa\backslash\left\{0\right\})$
-	\item $\varphi\mid\psi \wedge \psi\mid\varphi \Rightarrow \exists \ c \in \kappa \backslash \left\{0\right\} = \varphi = c\psi$
-	\item $0\mid\varphi \Leftrightarrow \varphi = 0$
-	\item $\varphi\mid\psi \wedge \varphi\mid\omega \Rightarrow \varphi\mid\alpha\psi + \beta\omega \ \ (\alpha, \beta \in K[X])$
+	\item $\phi\mid 0$, $1\mid\phi$, $\phi\mid\phi$
+	\item $\phi\mid\psi \wedge \psi\mid\omega \Rightarrow \phi\mid\omega$
+	\item $\phi\mid\psi \Rightarrow c\phi\mid d\psi \ \ (c, d \in \kappa\backslash\left\{0\right\})$
+	\item $\phi\mid\psi \wedge \psi\mid\phi \Rightarrow \exists \ c \in \kappa \backslash \left\{0\right\} = \phi = c\psi$
+	\item $0\mid\phi \Leftrightarrow \phi = 0$
+	\item $\phi\mid\psi \wedge \phi\mid\omega \Rightarrow \phi\mid\alpha\psi + \beta\omega \ \ (\alpha, \beta \in K[X])$
 \end{enumerate}
-Seien $\varphi_1, \ldots, \varphi_n \in K[X]$. Ein $\tau \in K[X]$ mit $\tau\mid\varphi_1, \ldots, \tau\mid\varphi_n$ heißt \highl{Gemeinsamer Teiler}{gemeinsamer Teiler} von $\varphi_1, \ldots, \varphi_n$.\\
-Mit $gT(\varphi_1, \ldots, \varphi_n)$ bezeichnen wir die Menge aller gemeinsamer Teiler von $\varphi_1, \ldots, \varphi_n$. Ein normiertes Polynom $\delta \in gT(\varphi_1, \ldots, \varphi_n)$ heißt \highl{Größter gemeinsamer Teiler}{größter gemeinsamer Teiler} ($\ggt$), von $\varphi_1, \ldots, \varphi_n$, falls $\tau\mid\delta$ für alle $\tau \in gT(\varphi_1, \ldots, \varphi_n)$ gilt.\\
-Wie in $\Z$ kann man zeigen, dass $\varphi_1, \ldots, \varphi_n$ stets genau einen $\ggt \delta$ haben. Wir schreiben $\delta = \ggt(\varphi_1, \ldots, \varphi_n)$. Wie in $\Z$ ist $\delta = \ggt(\varphi_1, \ggt(\varphi_2, \ldots, \varphi_n))$.\\
+Seien $\phi_1, \ldots, \phi_n \in K[X]$. Ein $\tau \in K[X]$ mit $\tau\mid\phi_1, \ldots, \tau\mid\phi_n$ heißt \highl{Gemeinsamer Teiler}{gemeinsamer Teiler} von $\phi_1, \ldots, \phi_n$.\\
+Mit $gT(\phi_1, \ldots, \phi_n)$ bezeichnen wir die Menge aller gemeinsamer Teiler von $\phi_1, \ldots, \phi_n$. Ein normiertes Polynom $\delta \in gT(\phi_1, \ldots, \phi_n)$ heißt \highl{Größter gemeinsamer Teiler}{größter gemeinsamer Teiler} ($\ggt$), von $\phi_1, \ldots, \phi_n$, falls $\tau\mid\delta$ für alle $\tau \in gT(\phi_1, \ldots, \phi_n)$ gilt.\\
+Wie in $\Z$ kann man zeigen, dass $\phi_1, \ldots, \phi_n$ stets genau einen $\ggt \delta$ haben. Wir schreiben $\delta = \ggt(\phi_1, \ldots, \phi_n)$. Wie in $\Z$ ist $\delta = \ggt(\phi_1, \ggt(\phi_2, \ldots, \phi_n))$.\\
 Daher genügt es meist, den $\ggt$ von zwei Polynomen zu berechnen. Dies geschieht win in $\Z$ mit dem erweiterten euklidischen Algorithmus:
 \end{bem}
 
@@ -76,7 +76,7 @@ Daher genügt es meist, den $\ggt$ von zwei Polynomen zu berechnen. Dies geschieh
 % Beispiel
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}
-$\varphi = X^4 + X^3 + 2X^2 + X + 1, \psi = X^4 - X^3 + 2X^2 - X + 1$,\\
+$\phi = X^4 + X^3 + 2X^2 + X + 1, \psi = X^4 - X^3 + 2X^2 - X + 1$,\\
 Erweiterter euklidischer Algorithmus:\\
 \[ \begin{array}{cclc}
 1 & 0 & X^4 - X^3 + 2X^2 + X + 1 & \\
@@ -85,14 +85,14 @@ Erweiterter euklidischer Algorithmus:\\
 -\frac{1}{2}X + \frac{1}{2} & \frac{1}{2}X + \frac{1}{2} & X^2 + 1 & \\
  & & 0 & 
 \end{array}\]
-Also $X^2 + 1 = \ggt(\varphi, \psi) = (-\frac{1}{2}X + \frac{1}{2})\varphi + (\frac{1}{2}X + \frac{1}{2})\psi$
+Also $X^2 + 1 = \ggt(\phi, \psi) = (-\frac{1}{2}X + \frac{1}{2})\phi + (\frac{1}{2}X + \frac{1}{2})\psi$
 \end{bsp}
 
 %%%%%%%%%%%%%%%%%%%
 % Satz 5.2
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:5.2}
-Für $\varphi_1, \ldots, \varphi_n, \psi \in K[X]$ gilt: \[\ggt(\varphi_1, \ldots, \varphi_n)\mid\psi \Leftrightarrow \exists \ \xi_1, \ldots, \xi_n \in K[X] \colon \xi_1\varphi_1 + \ldots + \xi_n\varphi_n = \psi\]
+Für $\phi_1, \ldots, \phi_n, \psi \in K[X]$ gilt: \[\ggt(\phi_1, \ldots, \phi_n)\mid\psi \Leftrightarrow \exists \ \xi_1, \ldots, \xi_n \in K[X] \colon \xi_1\phi_1 + \ldots + \xi_n\phi_n = \psi\]
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
@@ -106,7 +106,7 @@ Analog wie in $\Z$.
 % Bemerkung
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}
-Für $\varphi_1, \ldots, \varphi_n \in K[X]$ ist also genau dann $\ggt(\varphi_1, \ldots, \varphi_n) = 1$, wenn $\xi_1, \ldots, \xi_n \in K[X]$ existiert mit $\xi_1\varphi_1 + \ldots + \xi_n\varphi_n = 1$ Gegebenfalls heißen $\varphi_1, \ldots, \varphi_n$ \highl{Teilerfremd}{teilerfremd}.
+Für $\phi_1, \ldots, \phi_n \in K[X]$ ist also genau dann $\ggt(\phi_1, \ldots, \phi_n) = 1$, wenn $\xi_1, \ldots, \xi_n \in K[X]$ existiert mit $\xi_1\phi_1 + \ldots + \xi_n\phi_n = 1$ Gegebenfalls heißen $\phi_1, \ldots, \phi_n$ \highl{Teilerfremd}{teilerfremd}.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
@@ -130,59 +130,59 @@ Ein normiertes Polynom $\pi \in K[X] \backslash K$ heißt \highl{Irreduzibel}{irr
 % Satz 5.3
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}[Eindeutige Primfaktorzerlegung]\label{satz:5.3}\index{Eindeutige Primfaktorzerlegung}
-Zu jedem $\varphi \in K[X] \backslash K$ existiert bis auf die Reihenfolge eindeutig bestimmte irreduzible Polynome $\pi_1, \ldots, \pi_r \in K[X]$ und eine eindeutig bestimmte Konstante $c \in K$ mit $\varphi = c\pi_1 \cdot \ldots \cdot \pi_r$. Die Teiler von $\varphi$ sind dann die Polynome $d\pi_{i_1} \cdot \ldots \cdot \pi_{i_s}$ mit $d \in K \backslash \left\{0\right\}$ und $1 \leq i_1 < \ldots < i_s \leq r$.
+Zu jedem $\phi \in K[X] \backslash K$ existiert bis auf die Reihenfolge eindeutig bestimmte irreduzible Polynome $\pi_1, \ldots, \pi_r \in K[X]$ und eine eindeutig bestimmte Konstante $c \in K$ mit $\phi = c\pi_1 \cdot \ldots \cdot \pi_r$. Die Teiler von $\phi$ sind dann die Polynome $d\pi_{i_1} \cdot \ldots \cdot \pi_{i_s}$ mit $d \in K \backslash \left\{0\right\}$ und $1 \leq i_1 < \ldots < i_s \leq r$.
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
 % Bemerkung
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}
-Für $\varphi = \sum\limits_{i = 0}^{n}a_iX^i \in K[X]$ und $b \in K$ setzt man $\varphi(b) loneqq \sum\limits_{i = 0}^{n}a_ib^i$ und sagt, dass $\varphi(b)$ durch Einsetzen von $b$ in $\varphi$ entsteht. Auf diese Weise definiert $\varphi$ eine \highl{Funktion} $K \mapsto K, b \mapsto \varphi(b)$.\\
-Dabei können verschiedene $\varphi_1, \varphi_2 \in K[X]$ die gleiche Funktion definieren, z.\,B. gilt im Fall $K = \F_2, \varphi_1 = X^2 + X + 1, \varphi_2 = 1 \colon \varphi_1(0) = 1 = \varphi_2(0), \varphi_1(1) = 1 = \varphi_2(1)$, aber $\varphi_1 \neq \varphi_2$.\\
+Für $\phi = \sum\limits_{i = 0}^{n}a_iX^i \in K[X]$ und $b \in K$ setzt man $\phi(b) loneqq \sum\limits_{i = 0}^{n}a_ib^i$ und sagt, dass $\phi(b)$ durch Einsetzen von $b$ in $\phi$ entsteht. Auf diese Weise definiert $\phi$ eine \highl{Funktion} $K \mapsto K, b \mapsto \phi(b)$.\\
+Dabei können verschiedene $\phi_1, \phi_2 \in K[X]$ die gleiche Funktion definieren, z.\,B. gilt im Fall $K = \F_2, \phi_1 = X^2 + X + 1, \phi_2 = 1 \colon \phi_1(0) = 1 = \phi_2(0), \phi_1(1) = 1 = \phi_2(1)$, aber $\phi_1 \neq \phi_2$.\\
 Daher ist wichtig zwischen Polynomen und den durch sie definierten Funktionen zu unterscheiden.\\
-Für $a, b \in K$ und $\varphi, \psi \in K[X]$ gilt offenbar:
+Für $a, b \in K$ und $\phi, \psi \in K[X]$ gilt offenbar:
 \begin{enumerate}[(i)]
-	\item $(\varphi \mystackrel{\pm}{\cdot} \psi)(b) = \varphi(b) \mystackrel{\pm}{\cdot} \psi(b)$
-	\item $(a\varphi)(b) = a\varphi(b)$
+	\item $(\phi \mystackrel{\pm}{\cdot} \psi)(b) = \phi(b) \mystackrel{\pm}{\cdot} \psi(b)$
+	\item $(a\phi)(b) = a\phi(b)$
 \end{enumerate}
-Ist $\varphi(b) = 0$, so heißt $b$ \highl{Nullstelle} von $\varphi$.
+Ist $\phi(b) = 0$, so heißt $b$ \highl{Nullstelle} von $\phi$.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
 % Satz 5.4
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:5.4}
-Für $\varphi \in K[X]$ und $b \in K$ ist $\varphi(b)$ der Rest bei der Division und $\varphi$ durch $X - b$. Insbesondere gilt $\varphi(b) = 0 \Leftrightarrow X - b\mid\varphi$.
+Für $\phi \in K[X]$ und $b \in K$ ist $\phi(b)$ der Rest bei der Division und $\phi$ durch $X - b$. Insbesondere gilt $\phi(b) = 0 \Leftrightarrow X - b\mid\phi$.
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Division mit Rest liefert $\kappa, \rho \in K[X]$ mit $\varphi = (X - b)\kappa + \rho$ und $\rho \in K$.\\
+Division mit Rest liefert $\kappa, \rho \in K[X]$ mit $\phi = (X - b)\kappa + \rho$ und $\rho \in K$.\\
 Einsetzen ergibt:\\
-$\varphi(b) = \underbrace{(b - b)}_{= 0}\kappa(b) + \rho = \rho$. Daher gilt die erste Behauptung. Im Fall $\varphi(b) = 0$ ist also $\varphi = (X - b)\kappa$, d.\,h. $X - b\mid\varphi$. Umgekehrt gilt im Fall $\varphi = (X - b)\kappa \colon \varphi(b) = \underbrace{(b - b)}_{= 0}\kappa(b) = 0$.
+$\phi(b) = \underbrace{(b - b)}_{= 0}\kappa(b) + \rho = \rho$. Daher gilt die erste Behauptung. Im Fall $\phi(b) = 0$ ist also $\phi = (X - b)\kappa$, d.\,h. $X - b\mid\phi$. Umgekehrt gilt im Fall $\phi = (X - b)\kappa \colon \phi(b) = \underbrace{(b - b)}_{= 0}\kappa(b) = 0$.
 \end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
 % Satz 5.5
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:5.5}
-Jedes $\varphi \in K[X]$ mit $n loneqq \deg\varphi \neq -\infty$ hat in $K$ höchstens $n$ Nullstellen.
+Jedes $\phi \in K[X]$ mit $n loneqq \deg\phi \neq -\infty$ hat in $K$ höchstens $n$ Nullstellen.
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Seien $a_1, \ldots, a_m$ paarweise verschiedene Nullstellen von $\varphi$ in $K$. Dann sind $X - a_1, \ldots, X - a_m$ paarweise verschiedene irreduzible Polynome in $K[X]$. Nach \autoref{satz:5.4} ist $\varphi$ durch $X - a_1, \ldots, X - a_m$ teilbar, also auch durch $\underbrace{(X - a_1) \cdot \ldots \cdot (X - a_m)}_{\deg \ = m}$. Insbesondere ist $n = \deg\varphi \geq m$.
+Seien $a_1, \ldots, a_m$ paarweise verschiedene Nullstellen von $\phi$ in $K$. Dann sind $X - a_1, \ldots, X - a_m$ paarweise verschiedene irreduzible Polynome in $K[X]$. Nach \autoref{satz:5.4} ist $\phi$ durch $X - a_1, \ldots, X - a_m$ teilbar, also auch durch $\underbrace{(X - a_1) \cdot \ldots \cdot (X - a_m)}_{\deg \ = m}$. Insbesondere ist $n = \deg\phi \geq m$.
 \end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
 % Definition
 %%%%%%%%%%%%%%%%%%%
 \begin{defi}
-Für $\varphi = \sum\limits_{i = 0}^{\infty}a_iX^i \in K[X]$ definiert man die (\emph{formale})\highl{Ableitung} durch $\varphi' loneqq \sum\limits_{i = 1}^{\infty}ia_iX^{i - 1} \in K[X]$.
+Für $\phi = \sum\limits_{i = 0}^{\infty}a_iX^i \in K[X]$ definiert man die (\emph{formale})\highl{Ableitung} durch $\phi' loneqq \sum\limits_{i = 1}^{\infty}ia_iX^{i - 1} \in K[X]$.
 \end{defi}
 
 %%%%%%%%%%%%%%%%%%%
@@ -191,8 +191,8 @@ Für $\varphi = \sum\limits_{i = 0}^{\infty}a_iX^i \in K[X]$ definiert man die (\
 \begin{bem}
 Dann gelten die folgende Rechenregeln (Übungs-Aufgabe):
 \begin{enumerate}[(i)]
-	\item $(\varphi + \psi)' = \varphi' + \psi'$
-	\item $(\varphi\psi)' = \varphi'\psi + \varphi\psi'$
-	\item $(\varphi \circ \psi)' = (\varphi' \circ \psi)\psi'$; dabei ist $\varphi \circ \psi$ für $\varphi = \sum\limits_{i = 0}^{\infty}a_iX^i$ definiert durch $\varphi \circ \psi loneqq \sum\limits_{i = 0}^{\infty}a_i\psi^i$.
+	\item $(\phi + \psi)' = \phi' + \psi'$
+	\item $(\phi\psi)' = \phi'\psi + \phi\psi'$
+	\item $(\phi \circ \psi)' = (\phi' \circ \psi)\psi'$; dabei ist $\phi \circ \psi$ für $\phi = \sum\limits_{i = 0}^{\infty}a_iX^i$ definiert durch $\phi \circ \psi loneqq \sum\limits_{i = 0}^{\infty}a_i\psi^i$.
 \end{enumerate}
 \end{bem}
