--- a/kuelshammer-algebra1/Kapitel6.tex
+++ b/kuelshammer-algebra1/Kapitel6.tex
@@ -5,28 +5,28 @@ $K$ Körper!
 % Bemerkung 6.1
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:6.1}
-Seien $\alpha, \beta, \varphi \in K[X]$ mit $0 \neq \varphi\mid\alpha - \beta$. Dann nennt man $\alpha$ kongruent zu $\beta \ modulo \ \varphi$ und schreibt $\alpha \equiv \beta \pmod{\varphi}$. Man zeigt leicht, dass dies eine Äquivalenzrelation ist. Die Äquivalenzklasse von $\alpha$ heißt Restklasse $modulo \ \varphi$.\\
-Sie hat die Form $\alpha + \varphi K[X] loneqq \left\{\alpha + \varphi\tau \colon \tau \in K[X]\right\}$.\\
-Man setzt $(\varphi) loneqq \varphi K[X]$.\\
-Divison mit Rest liefert $\kappa, \rho \in K[X]$ mit $\alpha = \kappa\varphi + \rho$ und $\deg\rho < \deg\varphi$. Dann ist $\alpha \equiv \rho \pmod{\varphi}$, d.\,h. $\alpha + (\varphi) = \rho + (\varphi)$.\\
-Daher enthält jede Restklasse $modulo \ \varphi$ ein Polynom $\rho$ mit $\deg\rho < \deg\varphi$.\\
-Die Menge aller Restklassen $modulo \ \varphi$ ist also 
+Seien $\alpha, \beta, \phi \in K[X]$ mit $0 \neq \phi\mid\alpha - \beta$. Dann nennt man $\alpha$ kongruent zu $\beta \ modulo \ \phi$ und schreibt $\alpha \equiv \beta \pmod{\phi}$. Man zeigt leicht, dass dies eine Äquivalenzrelation ist. Die Äquivalenzklasse von $\alpha$ heißt Restklasse $modulo \ \phi$.\\
+Sie hat die Form $\alpha + \phi K[X] loneqq \left\{\alpha + \phi\tau \colon \tau \in K[X]\right\}$.\\
+Man setzt $(\phi) loneqq \phi K[X]$.\\
+Divison mit Rest liefert $\kappa, \rho \in K[X]$ mit $\alpha = \kappa\phi + \rho$ und $\deg\rho < \deg\phi$. Dann ist $\alpha \equiv \rho \pmod{\phi}$, d.\,h. $\alpha + (\phi) = \rho + (\phi)$.\\
+Daher enthält jede Restklasse $modulo \ \phi$ ein Polynom $\rho$ mit $\deg\rho < \deg\phi$.\\
+Die Menge aller Restklassen $modulo \ \phi$ ist also 
 \[\begin{array}{lcl}
-K[X] / (\varphi) & loneqq & \left\{\alpha + (\varphi) \colon \alpha \in K[X]\right\}\\
-& = & \left\{\rho + (\varphi) \colon \rho \in K[X], \deg\rho < n\right\}\\
-& = & \left\{a_0 + a_1X + \ldots + a_{n - 1}X^{n - 1} + (\varphi) \colon a_0, \ldots, a_{n - 1} \in K\right\}
+K[X] / (\phi) & loneqq & \left\{\alpha + (\phi) \colon \alpha \in K[X]\right\}\\
+& = & \left\{\rho + (\phi) \colon \rho \in K[X], \deg\rho < n\right\}\\
+& = & \left\{a_0 + a_1X + \ldots + a_{n - 1}X^{n - 1} + (\phi) \colon a_0, \ldots, a_{n - 1} \in K\right\}
 \end{array}\] 
-mit $n loneqq \deg\varphi$. Seien $\rho, \sigma \in K[X]$ mit $\deg\rho < n, \deg\sigma < n$ und $\rho + (\varphi) = \sigma + (\varphi)$, d.\,h. $\varphi\mid\rho - \sigma$.\\
-Gradvergleich liefert $\rho = \sigma$. Dies zeigt, dass die Restklassen $\rho + (\varphi)$ mit $\deg\rho < n$ paarweise verschieden sind. Im Fall $\left|K\right| < \infty$ ist $\left|K[X] / (\varphi)\right| = \left|K\right|^{\deg\varphi}$.
+mit $n loneqq \deg\phi$. Seien $\rho, \sigma \in K[X]$ mit $\deg\rho < n, \deg\sigma < n$ und $\rho + (\phi) = \sigma + (\phi)$, d.\,h. $\phi\mid\rho - \sigma$.\\
+Gradvergleich liefert $\rho = \sigma$. Dies zeigt, dass die Restklassen $\rho + (\phi)$ mit $\deg\rho < n$ paarweise verschieden sind. Im Fall $\left|K\right| < \infty$ ist $\left|K[X] / (\phi)\right| = \left|K\right|^{\deg\phi}$.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
 % Bemerkung 6.2
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:6.2}
-Sei $0 \neq \varphi \in K[X]$. Man zeigt leicht, dass die Kongruenz $modulo \ \varphi$ mit Addition und Multiplikation in $K[X]$ verträglich ist, d.\,h. für $\alpha_1, \alpha_2, \beta_1, \beta_2 \in K[X]$ gilt: \[\alpha_1 \equiv \alpha_2 \pmod{\varphi} \wedge \beta_1 \equiv \beta_2 \pmod{\varphi} \Rightarrow \alpha_1 \mystackrel{+}{\cdot} \beta_1 \equiv \alpha_2 \mystackrel{+}{\cdot} \beta_2 \pmod{\varphi}.\] Dies erlaubt es, auf $K[X] / (\varphi)$ Addition und Multiplikation zu definieren: \[\left[\alpha + (\varphi)\right] \mystackrel{+}{\cdot} \left[\beta + (\varphi)\right] loneqq \alpha \mystackrel{+}{\cdot} \beta + (\varphi) \ \ \ (\alpha, \beta \in K[X])\] Man rechnet nach, dass $K[X] / (\varphi)$ mit diesen Verknüpfungen zu einem kommutativen Ring wird, dieser heißt \highl{Restklassenring $modulo \ \varphi$}.\\
-Nullelement ist $0 + (\varphi)$, Einselement $1 + (\varphi)$.\\
-Außerdem kann man Elemente in $K[X] / (\varphi)$ mit Elementen aus $K$ multiplizieren: \[a(\beta + (\varphi)) loneqq a\beta + (\varphi) \ \ \ (a \in K, \beta \in K[X]).\] So wird $K[X] / (\varphi)$ zu einem $K$-Vektorraum. \autoref{bem:6.1} zeigt, dass die Elemente $1 + (\varphi), X + (\varphi), X^2 + (\varphi), \ldots, X^{n - 1} + (\varphi) \ \ (n loneqq \deg\varphi)$ eine $K$-Basis von $K[X] / (\varphi)$ bilden. Insbesondere ist $\dim_K K[X] / (\varphi) = \deg\varphi$.
+Sei $0 \neq \phi \in K[X]$. Man zeigt leicht, dass die Kongruenz $modulo \ \phi$ mit Addition und Multiplikation in $K[X]$ verträglich ist, d.\,h. für $\alpha_1, \alpha_2, \beta_1, \beta_2 \in K[X]$ gilt: \[\alpha_1 \equiv \alpha_2 \pmod{\phi} \wedge \beta_1 \equiv \beta_2 \pmod{\phi} \Rightarrow \alpha_1 \mystackrel{+}{\cdot} \beta_1 \equiv \alpha_2 \mystackrel{+}{\cdot} \beta_2 \pmod{\phi}.\] Dies erlaubt es, auf $K[X] / (\phi)$ Addition und Multiplikation zu definieren: \[\left[\alpha + (\phi)\right] \mystackrel{+}{\cdot} \left[\beta + (\phi)\right] loneqq \alpha \mystackrel{+}{\cdot} \beta + (\phi) \ \ \ (\alpha, \beta \in K[X])\] Man rechnet nach, dass $K[X] / (\phi)$ mit diesen Verknüpfungen zu einem kommutativen Ring wird, dieser heißt \highl{Restklassenring $modulo \ \phi$}.\\
+Nullelement ist $0 + (\phi)$, Einselement $1 + (\phi)$.\\
+Außerdem kann man Elemente in $K[X] / (\phi)$ mit Elementen aus $K$ multiplizieren: \[a(\beta + (\phi)) loneqq a\beta + (\phi) \ \ \ (a \in K, \beta \in K[X]).\] So wird $K[X] / (\phi)$ zu einem $K$-Vektorraum. \autoref{bem:6.1} zeigt, dass die Elemente $1 + (\phi), X + (\phi), X^2 + (\phi), \ldots, X^{n - 1} + (\phi) \ \ (n loneqq \deg\phi)$ eine $K$-Basis von $K[X] / (\phi)$ bilden. Insbesondere ist $\dim_K K[X] / (\phi) = \deg\phi$.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
@@ -35,9 +35,9 @@ Außerdem kann man Elemente in $K[X] / (\varphi)$ mit Elementen aus $K$ multipliz
 \begin{satz}\label{satz:6.1}
 Für $\alpha \in K[X]$ und $0 \neq \in K[X]$ sind äquivalent:
 \begin{enumerate}[(1)]
-	\item $\alpha + (\varphi)$ ist in $K[X] / (\varphi)$ invertierbar
+	\item $\alpha + (\phi)$ ist in $K[X] / (\phi)$ invertierbar
 	\item Es existiert ein $\beta \in K[X]$ mit $\alpha\beta \equiv 1 \pmod{p}$
-	\item $\ggt(\alpha, \varphi) = 1$
+	\item $\ggt(\alpha, \phi) = 1$
 \end{enumerate}
 \end{satz}
 
@@ -52,14 +52,14 @@ Analog zu $\ZmZ{m}$.
 % Bemerkung 6.3
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:6.3}
-Für $0 \neq \varphi \in K[X]$ gilt nach \autoref{satz:6.1}: \[U(K[X] / (\varphi)) = \left\{\alpha + (\varphi) \colon \alpha \in K[X], \ggt(\alpha, \varphi) = 1\right\}.\] Der erweiterte euklidische Algorithmus liefert zu $\alpha \in K[X]$ mit $\ggt(\alpha, \varphi) = 1$, Polynome $\beta, \gamma \in K[X]$ mit $\alpha\beta + \varphi\gamma = 1$. Dann: $\alpha\beta \equiv 1 \pmod{\varphi}$, d.\,h. $\left[\alpha + (\varphi)\right]\left[\beta + (\varphi)\right] = 1 + (\varphi).$ Also ist $\left[\alpha + (\varphi)\right]^{-1} = \beta + (\varphi)$.
+Für $0 \neq \phi \in K[X]$ gilt nach \autoref{satz:6.1}: \[U(K[X] / (\phi)) = \left\{\alpha + (\phi) \colon \alpha \in K[X], \ggt(\alpha, \phi) = 1\right\}.\] Der erweiterte euklidische Algorithmus liefert zu $\alpha \in K[X]$ mit $\ggt(\alpha, \phi) = 1$, Polynome $\beta, \gamma \in K[X]$ mit $\alpha\beta + \phi\gamma = 1$. Dann: $\alpha\beta \equiv 1 \pmod{\phi}$, d.\,h. $\left[\alpha + (\phi)\right]\left[\beta + (\phi)\right] = 1 + (\phi).$ Also ist $\left[\alpha + (\phi)\right]^{-1} = \beta + (\phi)$.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
 % Satz 6.2
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:6.2}
-Sei $0 \neq \varphi \in K[X]$ normiert, dann gilt: \[K[X] / (\varphi) \text{ Körper } \Leftrightarrow \varphi \text{ irreduzibel.}\]
+Sei $0 \neq \phi \in K[X]$ normiert, dann gilt: \[K[X] / (\phi) \text{ Körper } \Leftrightarrow \phi \text{ irreduzibel.}\]
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
@@ -67,11 +67,11 @@ Sei $0 \neq \varphi \in K[X]$ normiert, dann gilt: \[K[X] / (\varphi) \text{ Kör
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
 \begin{itemize}
-\item["`$\Rightarrow$"'] Sei $K[X] / (\varphi)$ Körper. Wegen $K[X] / (\varphi) \neq \left\{0\right\} ist \deg\varphi > 0$.\\
-Wäre $\varphi$ reduzibel, so wäre $\varphi = \alpha\beta$ mit $\alpha, \beta \in K[X]$, $\deg\alpha < \deg\varphi$, $\deg\beta < \deg\varphi$. Dann wäre $\alpha + (\varphi) \neq 0 \neq \beta + (\varphi)$, aber $\left[\alpha + (\varphi)\right]\left[\beta + (\varphi)\right] = \alpha\beta + (\varphi) = \varphi + (\varphi) = 0 + (\varphi) \Rightarrow$ Widersprich!\\
-\item["`$\Leftarrow$"'] Sei $\varphi$ irreduzibel. Dann $\deg\varphi > 0$ und $K[X] / (\varphi) \neq \left\{0\right\}$. Sei $0 \neq \alpha \in K[X]$ mit $\deg\alpha < \deg\varphi$.\\
-Dann: $\varphi\not\mid\alpha$, also $\ggt(\alpha, \varphi) = 1$\\
-Folglich: $\alpha + (\varphi) \in U(K[X]/(\varphi))$. Also $K[X] / (\varphi)$ Körper.
+\item["`$\Rightarrow$"'] Sei $K[X] / (\phi)$ Körper. Wegen $K[X] / (\phi) \neq \left\{0\right\} ist \deg\phi > 0$.\\
+Wäre $\phi$ reduzibel, so wäre $\phi = \alpha\beta$ mit $\alpha, \beta \in K[X]$, $\deg\alpha < \deg\phi$, $\deg\beta < \deg\phi$. Dann wäre $\alpha + (\phi) \neq 0 \neq \beta + (\phi)$, aber $\left[\alpha + (\phi)\right]\left[\beta + (\phi)\right] = \alpha\beta + (\phi) = \phi + (\phi) = 0 + (\phi) \Rightarrow$ Widersprich!\\
+\item["`$\Leftarrow$"'] Sei $\phi$ irreduzibel. Dann $\deg\phi > 0$ und $K[X] / (\phi) \neq \left\{0\right\}$. Sei $0 \neq \alpha \in K[X]$ mit $\deg\alpha < \deg\phi$.\\
+Dann: $\phi\not\mid\alpha$, also $\ggt(\alpha, \phi) = 1$\\
+Folglich: $\alpha + (\phi) \in U(K[X]/(\phi))$. Also $K[X] / (\phi)$ Körper.
 \end{itemize}
 \end{beweis}
 
@@ -79,7 +79,7 @@ Folglich: $\alpha + (\varphi) \in U(K[X]/(\varphi))$. Also $K[X] / (\varphi)$ Kö
 % Beispiel 6.1
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}\label{bsp:6.1}
-Sei $p \in \PZ$ und $n \in \N$. Um einen Körper mit $p^n$ Elementen zu konstruieren, genügt es also, ein irreduzibles Polynom vom Grad $n$ in $\F_p[X]$ zu finden. Wir werden später sehen, dass dies für alle $p$, $n$ geht. Im Fall $p = 2$, $n = 3$ ist z.\,B. $\varphi = X^3 + X + 1$ irreduzibel in $\F_2[X]$; denn sonst wäre $\varphi = (X - a)(X^2 + bX + c)$ mit $a, b, c \in \F_2$, also $\varphi(a) = 0$. Aber: $\varphi(0) = 1 = \varphi(1)$.\\
+Sei $p \in \PZ$ und $n \in \N$. Um einen Körper mit $p^n$ Elementen zu konstruieren, genügt es also, ein irreduzibles Polynom vom Grad $n$ in $\F_p[X]$ zu finden. Wir werden später sehen, dass dies für alle $p$, $n$ geht. Im Fall $p = 2$, $n = 3$ ist z.\,B. $\phi = X^3 + X + 1$ irreduzibel in $\F_2[X]$; denn sonst wäre $\phi = (X - a)(X^2 + bX + c)$ mit $a, b, c \in \F_2$, also $\phi(a) = 0$. Aber: $\phi(0) = 1 = \phi(1)$.\\
 Daher ist $\F_2[X] / (X^3 + X + 1)$ Körper mit $2^3 = 8$ Elementen. (ÜA: Addition- und Multiplikationstabelle aufstellen!)
 \end{bsp}
 
