--- a/kuelshammer-algebra1/Kapitel7.tex
+++ b/kuelshammer-algebra1/Kapitel7.tex
@@ -3,7 +3,7 @@
 % Definition 7.1
 %%%%%%%%%%%%%%%%%%%
 \begin{defi}\label{defi:7.1}
-Sei $L\mid K$ eine Körpererweiterung. Ein $b \in L$ heißt \highl{Algebraisch}{algebraisch} über $K$, falls ein $\varphi \in K[X] \backslash \left\{0\right\}$ mit $\varphi(b) = 0$ existiert. Anderenfalls: $b$ \highl{Transzendent}{transzendent} über $K$.\\
+Sei $L\mid K$ eine Körpererweiterung. Ein $b \in L$ heißt \highl{Algebraisch}{algebraisch} über $K$, falls ein $\phi \in K[X] \backslash \left\{0\right\}$ mit $\phi(b) = 0$ existiert. Anderenfalls: $b$ \highl{Transzendent}{transzendent} über $K$.\\
 Sind alle $b \in L$ algebraisch über $K$, so heißt $L\mid K$ eine \highl{Körpererweiterung!algebraisch}{algebraische Körpererweiterung} (anderenfalls: \highl{Körpererweiterung!transzendent}{transzendente Körpererweiterung}).
 \end{defi}
 
@@ -40,7 +40,7 @@ $L = \R, K = \Q, b = \sqrt{2} \Rightarrow \mu = X^2 - 2, \ (beachte: \sqrt{2} \n
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:7.1}
 Sei $L\mid K$ Körpererweiterung und $b \in L$ algebraisch mit Minimalpolynom $\mu$.\\
-Für $\varphi \in K[X]$ gilt dann: \[\varphi(b) = 0 \Leftrightarrow \mu\mid\varphi.\] Insbesondere ist $\mu$ irreduzibel in $K[X]$.
+Für $\phi \in K[X]$ gilt dann: \[\phi(b) = 0 \Leftrightarrow \mu\mid\phi.\] Insbesondere ist $\mu$ irreduzibel in $K[X]$.
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
@@ -48,13 +48,13 @@ Für $\varphi \in K[X]$ gilt dann: \[\varphi(b) = 0 \Leftrightarrow \mu\mid\varph
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
 \begin{itemize}
-\item["`$\Rightarrow$"'] Sei $\varphi \in K[X]$ mit $\varphi(b) = 0$\\
-Schreibe $\delta loneqq \ggt(\varphi, \mu) = \alpha\varphi + \beta\mu$ mit $\alpha, \beta \in K[X]$.\\
-Dann: $\delta(b) = \alpha(b)\underbrace{\varphi(b)}_{= 0} + \beta(b)\underbrace{\mu(b)}_{= 0} = 0$.\\
+\item["`$\Rightarrow$"'] Sei $\phi \in K[X]$ mit $\phi(b) = 0$\\
+Schreibe $\delta loneqq \ggt(\phi, \mu) = \alpha\phi + \beta\mu$ mit $\alpha, \beta \in K[X]$.\\
+Dann: $\delta(b) = \alpha(b)\underbrace{\phi(b)}_{= 0} + \beta(b)\underbrace{\mu(b)}_{= 0} = 0$.\\
 Nach Wahl von $\mu$ ist $\deg{(\delta)} = \deg{(\mu)}$.\\
-Da $\delta$, $\mu$ normiert mit $\delta\mid\mu$ sind, folgt $\mu = \delta\mid\varphi$.\\
-\item["`$\Leftarrow$"'] Sei $\mu\mid\varphi$, d.\,h. $\varphi = \mu\nu \ (\nu \in K[X])$.\\
-Dann: $\varphi(b) = \mu(b) \cdot \nu(b) = 0$.\\
+Da $\delta$, $\mu$ normiert mit $\delta\mid\mu$ sind, folgt $\mu = \delta\mid\phi$.\\
+\item["`$\Leftarrow$"'] Sei $\mu\mid\phi$, d.\,h. $\phi = \mu\nu \ (\nu \in K[X])$.\\
+Dann: $\phi(b) = \mu(b) \cdot \nu(b) = 0$.\\
 \end{itemize}
 Seien $\alpha, \beta \in K[X]$ mit $\mu = \alpha\beta$.\\
 Dann: $0 = \mu(b) = \alpha(b) \cdot \beta(b)$, also \randbem{Unterschied zu Matrizen in Körpern: $a \cdot b = 0 \Leftrightarrow a = 0 \vee b = 0$} $\alpha(b) = 0$ oder $\beta(b) = 0$, \OE{} $\alpha(b) = 0$.\\
@@ -71,7 +71,7 @@ Nach \autoref{bsp:6.2}(b) ist $K(b_1, \ldots, b_n)$ ein Teilkörper von $L$. Man 
 Man zeigt leicht:
 \begin{enumerate}[(i)]
 	\item $L(b_1, \ldots, b_n) = (K(b_1, \ldots, b_n))(b_n)$
-	\item $K(b) = \left\{\frac{\varphi(b)}{\psi(b)} \colon \varphi, \psi \in K[X], \psi(b) \neq 0\right\}$ für $b \in L$.
+	\item $K(b) = \left\{\frac{\phi(b)}{\psi(b)} \colon \phi, \psi \in K[X], \psi(b) \neq 0\right\}$ für $b \in L$.
 \end{enumerate}
 \end{bem}
 
@@ -79,7 +79,7 @@ Man zeigt leicht:
 % Satz 7.2
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:7.2}
-Sei $L\mid K$ Körpererweiterung und $b \in L$ algebraisch über $K$ mit Minimalpolynom $\mu$ vom Grad $n$. Dann ist die Abbildung \[f \colon \underbrace{K[X]/(\mu)}_{\text{Körper, weil }\mu \text{ irreduziebl}} \mapsto K(b), \ \varphi + (\mu) \mapsto \varphi(b)\] ein Körperisomorphismus; insbesondere ist $\left[K(b):K\right] = \deg{\mu} = n < \infty$, und \[K(b) = \left\{a_0 + a_1b + \ldots + a_{n-1}b^{n-1} \colon a_0, \ldots, a_{n-1} \in K\right\}.\]
+Sei $L\mid K$ Körpererweiterung und $b \in L$ algebraisch über $K$ mit Minimalpolynom $\mu$ vom Grad $n$. Dann ist die Abbildung \[f \colon \underbrace{K[X]/(\mu)}_{\text{Körper, weil }\mu \text{ irreduziebl}} \mapsto K(b), \ \phi + (\mu) \mapsto \phi(b)\] ein Körperisomorphismus; insbesondere ist $\left[K(b):K\right] = \deg{\mu} = n < \infty$, und \[K(b) = \left\{a_0 + a_1b + \ldots + a_{n-1}b^{n-1} \colon a_0, \ldots, a_{n-1} \in K\right\}.\]
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
@@ -87,9 +87,9 @@ Sei $L\mid K$ Körpererweiterung und $b \in L$ algebraisch über $K$ mit Minimalpo
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
 \underline{Wir zeigen:} f wohldefiniert.\\
-Dazu seien $\varphi, \psi \in K[X]$ mit $\varphi + (\mu) = \psi + (\mu)$.\\
-Dann: $\psi = \varphi + \alpha\mu$ mit $\alpha \in K[X]$.\\
-Folglich: $\psi(b) = \varphi(b) + \alpha(b)\mu(b) = \varphi(b)$. Also $f$ wohldefiniert.\\
+Dazu seien $\phi, \psi \in K[X]$ mit $\phi + (\mu) = \psi + (\mu)$.\\
+Dann: $\psi = \phi + \alpha\mu$ mit $\alpha \in K[X]$.\\
+Folglich: $\psi(b) = \phi(b) + \alpha(b)\mu(b) = \phi(b)$. Also $f$ wohldefiniert.\\
 Wegen 
 \[\begin{array}{lcl}
 f(\left[\beta + (\mu)\right] \mystackrel{+}{\cdot} \left[\gamma + (\mu)\right]) & = & f(\beta \mystackrel{+}{\cdot} \gamma + (\mu))\\
@@ -110,7 +110,7 @@ Offenbar ist $f$ auch $K$-linear. Daher: \[\left[K(b):K\right] = \dim_k K(b) = \
 \begin{bsp}\label{bsp:7.3}
 $L\mid K$ Körpererweiterung und $n loneqq \left[L:K\right] < \infty$.\\
 Dann ist $L\mid K$ algebraisch; denn für $b \in L$ können die $n + 1$ Elemente $1, b, b^2, \ldots, b^n$ nicht linear unabhängig sein. Folglich existiert $a_0, a_1, \ldots, a_n \in K$, nicht alle gleich $0$, mit $a_0 + a_1b + \ldots + a_nb^n = 0$.\\
-Also: $\varphi loneqq a_0 + a_1X + \ldots + a_nX^n \in K[X] \backslash \left\{0\right\}$ mit $\varphi(b) = 0$, d.\,h. $b$ algebraisch über $K$.\\
+Also: $\phi loneqq a_0 + a_1X + \ldots + a_nX^n \in K[X] \backslash \left\{0\right\}$ mit $\phi(b) = 0$, d.\,h. $b$ algebraisch über $K$.\\
 Ist also $E$ ein endlicher Körper und $F \subseteq E$ Teilkörper, dann ist $E\mid F$ algebraisch.
 \end{bsp}
 
@@ -195,7 +195,7 @@ Folglich: $\left[\Q(\sqrt{2} + \sqrt{3}):\Q\right] = 4$ und $\Q(\sqrt{2}, \sqrt{
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:7.4}
 Sei $E$ endlicher Körper mit $\left|E\right| = p^n \ (p \in \PZ, n \in \N)$ und sei $F$ Teilkörper von $E$ (z.\,B.: der Primkörper von $E$).\\
-Dann ist $E \cong F[X] / (\varphi)$ für ein irreduzibles Polynom $\varphi \in F[X]$ mit $\varphi\mid X^{p^n} - X$.
+Dann ist $E \cong F[X] / (\phi)$ für ein irreduzibles Polynom $\phi \in F[X]$ mit $\phi\mid X^{p^n} - X$.
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
@@ -221,24 +221,24 @@ Nach Aufgabe 15 gilt im Polynomring $K[X]$: \[\ggt(X^m-1, X^n-1) = X^{\ggt(m, n)
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:7.5}
 Sei $K$ ein endlicher Körper, $q loneqq \left|K\right|$ und $n \in \N$.\\
-Dann:\randbem{Formel muss man wissen! Sehr wichtig für Theorie!} \[X^{q^n} - X = \prod_{\varphi \in K[X] \text{ irreduzibel}, \atop \deg{\varphi\mid n}}\varphi\]
+Dann:\randbem{Formel muss man wissen! Sehr wichtig für Theorie!} \[X^{q^n} - X = \prod_{\phi \in K[X] \text{ irreduzibel}, \atop \deg{\phi\mid n}}\phi\]
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Sei $\varphi \in K[X]$ irreduzibel mit $d loneqq \deg{\varphi\mid n}$.\\
-Dann ist $K[X] / \varphi$ ein Körper mit $q^d$ Elementen. Für $b loneqq X + (\varphi)$ gilt dann: $b^{q^d} = b$, d.\,h. $0 = b^{q^d} - b = X^{q^d} - X + (\varphi)$.\\
-Folglich: $\varphi\mid X^{q^d} - X\stackrel{\autoref{bem:7.3}}{\mid}X^{q^n} - X$.\\
-Sei umgekehrt $\varphi \in K[X]$ irreduzibel mit $\varphi\mid X^{q^n} - X$ und $d loneqq \deg{\varphi}$. Wie im ersten Teil des Beweises ist $\varphi\mid X^{q^d} - X$. Daher: $\varphi\mid \ggt(X^{q^d} - X, X^n - X) = X^{q^{\ggt(d, n)}} - X$, d.\,h. $X^{q^{\ggt(d, n)}} - X + (\varphi) = 0$ in $K[X] / (\varphi)$.\\
-Jedes Element $K[X] / (\varphi)$ kann man in der folgenden Form schreiben: \[b = a_0 + a_1X + \ldots + a_{d-1}X^{d-1} + (\varphi) \ (a_i \in K).\] Für $a \in K$ ist $a = a^q = a^{q^2} = \ldots$. Daher ist \randbem{alle $b$ sind Nullstellen von $X^{q^{\ggt(d, n)}} - X$} $b^{q^{\ggt(d, n)}} = b$ für alle $b \in K[X]/(\varphi)$. Also $q^d = \left|K[X]/(\varphi)\right| \leq q^{\ggt(d, n)} \leq q^d$, d.\,h. $d = \ggt(d, n)\mid n$.\\
-Folglich genügt zu zeigen, dass kein Primfaktor von $X^{q^n} - X$ mehrfach auftritt. Sei also $\varphi \in K[X]$ irreduzibel mit $\varphi^2\mid X^{q^n} - X$. Schreibe: $X^{q^n} - X = \varphi^2\varphi$ mit $\psi \in K[X]$. Formale Ableitung liefert den Widerspruch: 
+Sei $\phi \in K[X]$ irreduzibel mit $d loneqq \deg{\phi\mid n}$.\\
+Dann ist $K[X] / \phi$ ein Körper mit $q^d$ Elementen. Für $b loneqq X + (\phi)$ gilt dann: $b^{q^d} = b$, d.\,h. $0 = b^{q^d} - b = X^{q^d} - X + (\phi)$.\\
+Folglich: $\phi\mid X^{q^d} - X\stackrel{\autoref{bem:7.3}}{\mid}X^{q^n} - X$.\\
+Sei umgekehrt $\phi \in K[X]$ irreduzibel mit $\phi\mid X^{q^n} - X$ und $d loneqq \deg{\phi}$. Wie im ersten Teil des Beweises ist $\phi\mid X^{q^d} - X$. Daher: $\phi\mid \ggt(X^{q^d} - X, X^n - X) = X^{q^{\ggt(d, n)}} - X$, d.\,h. $X^{q^{\ggt(d, n)}} - X + (\phi) = 0$ in $K[X] / (\phi)$.\\
+Jedes Element $K[X] / (\phi)$ kann man in der folgenden Form schreiben: \[b = a_0 + a_1X + \ldots + a_{d-1}X^{d-1} + (\phi) \ (a_i \in K).\] Für $a \in K$ ist $a = a^q = a^{q^2} = \ldots$. Daher ist \randbem{alle $b$ sind Nullstellen von $X^{q^{\ggt(d, n)}} - X$} $b^{q^{\ggt(d, n)}} = b$ für alle $b \in K[X]/(\phi)$. Also $q^d = \left|K[X]/(\phi)\right| \leq q^{\ggt(d, n)} \leq q^d$, d.\,h. $d = \ggt(d, n)\mid n$.\\
+Folglich genügt zu zeigen, dass kein Primfaktor von $X^{q^n} - X$ mehrfach auftritt. Sei also $\phi \in K[X]$ irreduzibel mit $\phi^2\mid X^{q^n} - X$. Schreibe: $X^{q^n} - X = \phi^2\phi$ mit $\psi \in K[X]$. Formale Ableitung liefert den Widerspruch: 
 \[\begin{array}{lcl}
 \underbrace{-1}_{\text{Grad }0} & = & (X^{q^n} - X)'\\
-& = & (\varphi^2\psi)' + (\varphi^2)'\psi\\
-& = & \varphi^2\psi' + 2\varphi\varphi'\psi\\
-& = & \underbrace{\varphi(\psi' + 2\varphi'\psi)}_{\text{Grad mindestens }\deg{\varphi}\text{ Widerspruch zu Grad }0}
+& = & (\phi^2\psi)' + (\phi^2)'\psi\\
+& = & \phi^2\psi' + 2\phi\phi'\psi\\
+& = & \underbrace{\phi(\psi' + 2\phi'\psi)}_{\text{Grad mindestens }\deg{\phi}\text{ Widerspruch zu Grad }0}
 \end{array}\].
 \end{beweis}
 
@@ -289,15 +289,15 @@ Anderenfalls währe mit dem obigen Bezeichnungen $I_n = 0$, d.\,h. $0 = \sum\limi
 % Satz 7.7
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:7.7}
-Sei $K$ ein endlicher Körper, und seien $\varphi, \psi$ irreduzible Polynome vom gleichem Grad $n$ in $K[X]$. Dann: 
-\[K[X] / (\varphi) \cong K[X]/(\psi)\]
+Sei $K$ ein endlicher Körper, und seien $\phi, \psi$ irreduzible Polynome vom gleichem Grad $n$ in $K[X]$. Dann: 
+\[K[X] / (\phi) \cong K[X]/(\psi)\]
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Sei $\left|K\right| = q$, also $\left|K[X]/(\varphi)\right| = q^n = \left|K[X]/(\psi)\right|$. Nach \autoref{satz:7.5} ist $\varphi\mid X^{q^n} - X$, d.\,h. $X^{q^n} - X = \varphi\omega$ mit $\omega \in K[X]$. Jedes $b \in K[X]/(\varphi)$ erfüllt $b^{q^n} = b$, d.\,h. $0 = b^{q^n} - b = \varphi(b)\omega(b)$. Da $\omega$ höchstens $\deg{\omega} < q^n$ Nullstellen in $K[X]/(\psi)$ hat, existiert ein $b \in K[X]/(\psi)$ mit $\varphi(b) = 0$. Die Abbildung $f \colon K[X]/(\varphi) \mapsto K[X]/(\psi)$, $\alpha + (\varphi) \mapsto \alpha(b)$, ist wohldefiniert; denn sind $\alpha, \beta \in K[X]$ mit $\alpha + (\varphi) = \beta + (\varphi)$, so ist $\beta = \alpha + \tau\varphi$ für ein $\tau \in K[X]$, also $\beta(b) = \alpha(b) + \tau(b)\varphi(b) = \alpha(b)$. Man rechnet leicht nach, dass $f$ ein Körperhomomorphismus ist. Insbesondere ist $f$ injektiv, also auch surjektiv.
+Sei $\left|K\right| = q$, also $\left|K[X]/(\phi)\right| = q^n = \left|K[X]/(\psi)\right|$. Nach \autoref{satz:7.5} ist $\phi\mid X^{q^n} - X$, d.\,h. $X^{q^n} - X = \phi\omega$ mit $\omega \in K[X]$. Jedes $b \in K[X]/(\phi)$ erfüllt $b^{q^n} = b$, d.\,h. $0 = b^{q^n} - b = \phi(b)\omega(b)$. Da $\omega$ höchstens $\deg{\omega} < q^n$ Nullstellen in $K[X]/(\psi)$ hat, existiert ein $b \in K[X]/(\psi)$ mit $\phi(b) = 0$. Die Abbildung $f \colon K[X]/(\phi) \mapsto K[X]/(\psi)$, $\alpha + (\phi) \mapsto \alpha(b)$, ist wohldefiniert; denn sind $\alpha, \beta \in K[X]$ mit $\alpha + (\phi) = \beta + (\phi)$, so ist $\beta = \alpha + \tau\phi$ für ein $\tau \in K[X]$, also $\beta(b) = \alpha(b) + \tau(b)\phi(b) = \alpha(b)$. Man rechnet leicht nach, dass $f$ ein Körperhomomorphismus ist. Insbesondere ist $f$ injektiv, also auch surjektiv.
 \end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
