Erste Grafik nach TikZ portiert
git-svn-id: https://svn.lug-jena.de/uni-skripte@2396 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -56,6 +56,7 @@
 \usepackage{ifpdf}
 \usepackage{todonotes}
 \usepackage{braket}
+\usepackage{tikz}
 
 % \ifpdf
 % % Diese mgtex_23 lädt das Paket epic, das wahnsinnig viele Register braucht.
@@ -2563,20 +2564,15 @@ Für jede Teilmenge $M \subseteq C$ mit $0, 1 \in M$ ist $M_{\infty}$ ein
 % Beweis
 \begin{beweis}
 \begin{enumerate}[(i)]
-	\begin{multicols}{2}
-	\item $\operatorname{i} \coloneqq \sqrt{-1} \in M_{\infty}$:\\
-	% \InitGraph{3}{3}{1.5}{1.5}{1cm}
-	% \Axes
-	% \UserLine[2](3, 0){i}
-	% \UserLine[3](3, 3){}
-	% \UserLine[4](3, 3){}
-	% \Coordinates(1,1)(1,1)
-	% \SetDashed
-	% \CircleAt(0, 0)(1)
-	% \SetNormal
-	% \RightAngleAt(0, 0)(0)
-	% \CloseGraph
-	
+\item  $\operatorname{i} \coloneqq \sqrt{-1} \in M_{\infty}$:
+  \begin{tikzpicture}
+    \draw[->] (-1.5,0) -- (1.5,0);
+    \draw[->] (0,-1.5) -- (0,1.5);
+    \draw[thick,dashed] (0,0) circle (30pt);
+    \draw (10pt,0pt) arc (0:90:10pt);
+    \draw (1.2,-.2) node {$1$};
+    \draw (.2,1.2) node {$\operatorname{i}$};
+  \end{tikzpicture}	
 	\item $Z \in M_{\infty} \Rightarrow \overline{z}, -z \in M_{\infty}$:\\
 	% \InitGraph{4}{3}{2}{1.5}{1cm}
 	% \Axes
@@ -2701,7 +2697,6 @@ Für jede Teilmenge $M \subseteq C$ mit $0, 1 \in M$ ist $M_{\infty}$ ein
 	% \SetNormal
 	% \CloseGraph
 	
-	\end{multicols}
 \end{enumerate}.
 \end{beweis}
 
