Zweite Grafik mit -z, z und overline z in TikZ portiert.
git-svn-id: https://svn.lug-jena.de/uni-skripte@2397 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -2564,7 +2564,7 @@ Für jede Teilmenge $M \subseteq C$ mit $0, 1 \in M$ ist $M_{\infty}$ ein
 % Beweis
 \begin{beweis}
 \begin{enumerate}[(i)]
-\item  $\operatorname{i} \coloneqq \sqrt{-1} \in M_{\infty}$:
+\item  $\operatorname{i} \coloneqq \sqrt{-1} \in M_{\infty}$:\\
   \begin{tikzpicture}
     \draw[->] (-1.5,0) -- (1.5,0);
     \draw[->] (0,-1.5) -- (0,1.5);
@@ -2573,7 +2573,21 @@ Für jede Teilmenge $M \subseteq C$ mit $0, 1 \in M$ ist $M_{\infty}$ ein
     \draw (1.2,-.2) node {$1$};
     \draw (.2,1.2) node {$\operatorname{i}$};
   \end{tikzpicture}	
-	\item $Z \in M_{\infty} \Rightarrow \overline{z}, -z \in M_{\infty}$:\\
+\item $Z \in M_{\infty} \Rightarrow \overline{z}, -z \in M_{\infty}$:\\
+  \begin{tikzpicture}
+    \draw[->] (-1.5,0) -- (1.5,0);
+    \draw[->] (0,-1.5) -- (0,1.5);
+    \draw[thick] (-1,-1) -- (1,1);
+    \draw[thick] (0,0) -- (1,-1);
+    \draw[dashed] (1,1) -- (1,-1);
+    \filldraw [gray] (-1,-1) circle (2pt);
+    \filldraw [gray] (1,1) circle (2pt);
+    \filldraw [gray] (1,-1) circle (2pt);
+    \draw (1,10pt) arc (90:180:10pt);
+    \draw (-1.3,-1)  node {$-z$};
+    \draw (1.2,1) node {$z$};
+    \draw (1.2,-1) node {$\overline{z}$};
+  \end{tikzpicture}
 	% \InitGraph{4}{3}{2}{1.5}{1cm}
 	% \Axes
 	% \BigPointAt(1.5, 1)
