Zirkelgraph mit xpic gesetzt
Damit sind alle Vorkommen von mg23-Graphen verschwunden. Die sind nun entweder mit TikZ oder mit xypic gesetzt.

git-svn-id: https://svn.lug-jena.de/uni-skripte@2404 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/Kapitel14.tex
+++ b/kuelshammer-algebra1/Kapitel14.tex
@@ -496,20 +496,14 @@ Auf diese Weise erhalten wir einen Monomorphismus:
 \[\Gamma\colon G\mapsto\Sym(5)\]
 dabei ist $5 = \deg\phi = \left[\Q(b_1):\Q\right]\mid\left[L':\Q\right] = \abs{G}$.
 Nach Cauchy (\autoref{satz:14.8}) entahlten $G$ und $\Gamma(G)$ ein Element der Ordnung $5$.
-Man zeigt leicht, dass die Elemente der Ordnung $5$ in $\Sym(5)$ die folgende Form haben:\\
-% \InitGraph{3}{3}{0.5}{0.5}{0.5cm}
-% \TextAt(0, 1.2)[c]{e}
-% \TextAt(0.3, 0)[c]{d}
-% \TextAt(1.7, 0)[c]{c}
-% \TextAt(1, 2)[c]{a}
-% \TextAt(2, 1.2)[c]{b}
-% \ArrowAt(1.2, 1.8, 1.8, 1.4) % a -> b
-% \ArrowAt(2, 0.9, 1.8, 0.3) % b -> c
-% \ArrowAt(1.4, 0.1, 0.6, 0.1) % c -> d
-% \ArrowAt(0.2, 0.2, 0.1, 0.9) % d -> e
-% \ArrowAt(0.2, 1.4, 0.8, 1.9) % e -> a
-% \CloseGraph
-% $=:(a, b, c, d, e)$, dabei ist $\left\{a, b, c, d, e\right\} = \left\{1, 2, 3, 4, 5\right\}$\\
+Man zeigt leicht, dass die Elemente der Ordnung $5$ in $\Sym(5)$ die
+folgende Form haben:
+\begin{gather*}
+  \xymatrix{ & a \ar[dr] & \\
+    e \ar[ur] & & b \ar[d]\\
+    d \ar[u] & & c \ar[ll] \ar[u] }
+\end{gather*}
+ $=\colon(a, b, c, d, e)$, dabei ist $\{a, b, c, d, e\} = \{1, 2, 3, 4, 5\}$\\
 Sei also $(a, b, c, d, e) \in \Gamma(G)$.
 Die komplexe Konjugation liefert ein weiteres Element in $G$.
 Das entsprechende Element in $\Gamma(G)$ hat die Form:
